--- a/基础物理/杨振宁/第三讲.md
+++ b/基础物理/杨振宁/第三讲.md
@@ -1,7 +1,7 @@
 
-9.8 meters per second square. I wrote a minus sign in front. If you take the axis to go upwards, if you take the axis to go downwards, of course it becomes a plus sign. (9.8米每二次方秒。我在前面写了个负号。如果你设定坐标轴向上为正方向，向下为负方向，当然它就变成了正号。)
+9.8 meters per second square. I wrote a minus sign in front. If you take the axis to go upwards, if you take the axis to go downwards, of course it becomes a plus sign. (如果你设定坐标轴向上为正方向，9.8 米每二次方秒，我在前面写了个负号。如果你令坐标轴向下为正方向，当然它就变成了正号。)
 
-（开篇这一小段没有额外上下文，应该是在介绍自由落体加速度大小）
+（开篇这一小段没有额外上下文，仅此一小段介绍自由落体加速度大小和方向）
 
 ### 第三章：矢量
 
@@ -9,38 +9,44 @@ So today we'll move on to vectors. In the handout I distributed to you, if you l
 
 #### 麦克斯韦与矢量
 
-This concept was not particularly noticed before Maxwell. I'll read the notes to you. James Clerk Maxwell was the first physicist to emphasize the importance of vectors. The following diagram was from a paper he wrote called On the Mathematical Classification of Physical Quantities. You see the three diagrams there? On the left is convergence. Convergence means 向心的.（在麦克斯韦之前，这个概念并未受到特别关注。我来给你读一下笔记。詹姆斯·克拉克·麦克斯韦是第一位强调矢量重要性的物理学家。下面的图表来自他的一篇论文，题为《论物理量的数学分类》。你看到那三个图表了吗？左边的是收敛。收敛意味着向心的。）
+This concept was not particularly noticed before Maxwell. I'll read the notes to you. James Clerk Maxwell was the first physicist to emphasize the importance of vectors. The following diagram was from a paper he wrote called On the Mathematical Classification of Physical Quantities. You see the three diagrams there? （在麦克斯韦之前，这个概念并未受到特别关注。我来给你读一下笔记。詹姆斯·克拉克·麦克斯韦是第一位强调矢量重要性的物理学家。下面的图表来自他的一篇论文，题为《论物理量的数学分类》。你看到那三个图表了吗？）
 
-![[Pasted image 20251019203908.png]]
-The one in the middle is called curl. The one on the right is called convergence and curl. The term curl is still used today. It is a very important concept. Today's symbol is a triangular cross. Can this be abbreviated? Can this word be abbreviated? Let's talk about it next time. Convergence is no longer used today. Now the name is called divergence, which is the opposite of it. （中间那个叫做旋度。右边那个叫做收敛与旋度。旋度这个术语至今仍在使用。它是一个非常重要的概念。今天的符号是 $\nabla$。收敛这个词现在已经不再使用了。现在的名称叫做发散，与它相反。）
+![[Pasted image 20251019203908.png|500]]
+On the left is convergence. Convergence means 向心的. The one in the middle is called curl. The one on the right is called convergence and curl. The term curl is still used today. It is a very important concept. Today's symbol is a triangular cross. Can this be abbreviated? Can this word be abbreviated? Let's talk about it next time. Convergence is no longer used today. Now the name is called divergence, which is the opposite of it. （左边的是收敛，收敛意味着向心的；中间那个叫做旋度，右边那个叫做收敛与旋度。旋度这个术语至今仍在使用。它是一个非常重要的概念。今天的符号是 $\nabla \times$。收敛这个词现在已经不再使用了，现在的名称叫做散度，与它相反。）
 
-So at the beginning of Maxwell, we already knew that The importance of these concepts is that divergence and curve are both differential operators. We are going to get to that later. However, although Maxwell emphasized the importance of vectors, he never used the vector notation in his papers and books, writing the famous Maxwell equations in clumsy component form.(因此，麦克斯韦在最开始的时候，已经认识到这些概念的重要性，散度和旋度都是微分算子。这一点我们稍后会详细讨论。然而，尽管麦克斯韦强调了矢量的重要性，他在论文和著作中却从未使用矢量符号，而是以笨拙的分量形式写出了著名的麦克斯韦方程组。)
+So at the beginning of Maxwell, we already knew that The importance of these concepts is that divergence and curve are both differential operators. We are going to get to that later. However, although Maxwell emphasized the importance of vectors, he never used the vector notation in his papers and books, writing the famous Maxwell equations in clumsy component form.(因此，麦克斯韦在最开始的时候，已经认识到这些概念的重要性，散度和旋度都是微分算子。这一点我们后面会详细讨论。然而，尽管麦克斯韦强调了矢量的重要性，他在论文和著作中却从未使用矢量符号，而是以笨拙的分量形式写出了著名的麦克斯韦方程组。)
 
-The importance of Maxwell's equations is hard to explain. Without Maxwell's equations, there would be no 21st century. All the wireless, TV, Internet, communication, everything is based on Maxwell's equations.(麦克斯韦方程组的重要性难以言喻。没有麦克斯韦方程组，就不会有 21 世纪所有的无线通信、电视、互联网、通讯，一切都建立在麦克斯韦方程组的基础上。)
+The importance of Maxwell's equations is hard to explain. Without Maxwell's equations, there would be no 21st century. All the wireless, TV, Internet, communication, everything is based on Maxwell's equations.(麦克斯韦方程组的重要性难以言喻。假如没有麦克斯韦方程组，那就不会有 21 世纪所有的无线通信、电视、互联网、通讯，这一切都是建立在麦克斯韦方程组的基础之上。)
 
-Maxwell's equation was written in three articles in the mid-19th century. I think this is one of the most important articles in human history. Although he emphasized the importance of vectors, he did not use it in his papers. Therefore, every equation has to be written three times in the three components. He used three articles. Therefore, the Maxwell's equation is hard to explain.（麦克斯韦方程是在 19 世纪中叶的三篇论文中写成的。我认为这是人类历史上最重要的论文之一。尽管他强调了向量的重要性，但在论文中并未使用。因此，每个方程都必须用三个分量写三遍，他用了三篇论文。因此，麦克斯韦方程很不好看。）
+Maxwell's equation was written in three articles in the mid-19th century. I think this is one of the most important articles in human history. Although he emphasized the importance of vectors, he did not use it in his papers. Therefore, every equation has to be written three times in the three components. He used three articles. Therefore, the Maxwell's equation is hard to explain.（麦克斯韦方程是在 19 世纪中叶的三篇论文中写成的。我认为这是人类历史上最重要的论文之一。可尽管他强调了向量的重要性，但他在论文中并未使用。因此，每个方程都必须用三个分量写三遍，他用了三篇论文。因此，麦克斯韦方程很不好看。）
 
 It was changed to vector notation after many years. Who did the most important thing here? Look at this page. It was J. Josiah Willard Gibbs who populated in the 19th century the use of vectors. Gibbs was an American physicist. Perhaps, well he certainly was the greatest American physicist of the 19th century. Perhaps, with Maxwell, he would be classified as among the most important physicists of the 19th century.（多年后改用矢量表示法。这里谁做得最重要？看看这一页。是 19 世纪的 J·约西亚·威拉德·吉布斯推广了矢量的使用。吉布斯是一位美国物理学家。可以说，他无疑是 19 世纪最伟大的美国物理学家。甚至可以说，他与麦克斯韦齐名，堪称 19 世纪最重要的物理学家之一。）
 
+> 吉布斯在统计力学和热力学领域有开创性的、系统性的贡献。杨老多次在其演讲和文章（如《美与物理学》）中，将热力学、电磁学和统计力学并列为 19 世纪物理学的三项最高成就。其中，统计力学的主要奠基人正是麦克斯韦、玻尔兹曼和吉布斯。
+
 #### 四元数
 
-When he was teaching at Yale, he emphasized the importance of vectors. I will continue. Maxwell did not use the vector notation, because he wanted to go beyond vectors, and introduced a further mathematical quantity called quaternions, which had been invented by W. R. Hamilton in 1843. Hamilton was a great mathematician, a great physicist. If you read more advanced physics, you will know that Hamilton's Jacobi equations contributed a lot to physics. His contributions directly influenced the development of quantum physics. （他在耶鲁任教时，强调了向量的重要性。我接着说。麦克斯韦没有使用矢量符号，因为他希望超越矢量，引入了另一种由 W.R.汉密尔顿于 1843 年发明的数学量——四元数。汉密尔顿是一位伟大的数学家，伟大的物理学家。如果你阅读更高级的物理内容，你就会知道汉密尔顿-雅可比方程对力学的贡献巨大。对力学的贡献直接影响了量子物理学的发展。）
+When he was teaching at Yale, he emphasized the importance of vectors. I will continue. Maxwell did not use the vector notation, because he wanted to go beyond vectors, and introduced a further mathematical quantity called quaternions, which had been invented by W. R. Hamilton in 1843. Hamilton was a great mathematician, a great physicist. If you read more advanced physics, you will know that Hamilton's Jacobi equations contributed a lot to physics. His contributions directly influenced the development of quantum physics. （他在耶鲁任教时，强调了向量的重要性。我接着说。麦克斯韦没有使用矢量符号，是因为他希望超越矢量，引入了另一种由 W.R.汉密尔顿于 1843 年发明的数学量——四元数。汉密尔顿是一位伟大的数学家，伟大的物理学家。如果你阅读更高级的物理内容，你就会知道汉密尔顿-雅可比方程对力学的贡献巨大。对力学的贡献直接影响了量子物理学的发展。）
+
+> 哈密顿-雅可比方程：理论物理中关于是经典力学中的一个核心理论，它将复杂的力学系统运动问题转化为一个偏微分方程的求解问题。它不仅是一种强大的数学工具，更是一种深刻统一性的体现。它用简洁优美的偏微分方程，统一了粒子力学与波动光学，架起了经典物理与量子世界的桥梁，并在现代工程优化中展现出强大生命力。
 
 In 1853, Hamilton came up with a mathematical structure. He named it quaternion. He was very proud of the invention of quaternion. After his death, he found quaternion on a bridge. Now, the bridge has quaternion's algebra engraved on it. Maxwell admired Hamilton and liked quaternion very much. So, Maxwell felt that vectors were not enough.（1853 年，汉密尔顿提出了一种数学结构。他将其命名为四元数。他对四元数的发明感到非常自豪。他去世后，人们在桥上发现了四元数。如今，那座桥上刻着四元数的代数。麦克斯韦敬仰哈密尔顿，也非常喜欢四元数。因此，麦克斯韦认为矢量还不够。）
 
+![[Pasted image 20251020222953.png|600]]
+
 So, he changed the notation of physics to quaternion. Because of this, he felt that vectors were not enough. He wanted to go further to quaternion. But he could not do it. So, he did not use vector notation in his article. Today, we can see that his articles and books use component notation instead of vector notation.（因此，他将物理学的符号体系改为四元数。正因如此，他觉得矢量还不够。他想更进一步研究四元数，但未能如愿。所以他在文章中并未采用矢量符号。如今我们可以看到，他的文章和著作中使用的都是分量符号而非矢量符号。）
 
-Gibbs forgot quaternion. He said, let us only use vectors. After that, he gradually developed vector notation. So, should we forget quaternion? There is a very complicated story. This is the story I told in the article. For some comments about quaternions and Hamiltonian, please see page 23 of my selected papers.（吉布斯忘记了四元数。他说，我们只用向量就够了。之后，他逐渐发展出了向量表示法。那么，我们是否也该忘记四元数呢？这其中有一段非常复杂的故事。这就是我在文章中讲述的故事。关于四元数和哈密尔顿的一些评论，请参阅我论文选集的第 23 页。）
+Gibbs forgot quaternion. He said, let us only use vectors. After that, he gradually developed vector notation. So, should we forget quaternion? There is a very complicated story. This is the story I told in the article. For some comments about quaternions and Hamiltonian, please see page 23 of my selected papers.（吉布斯不用四元数。他说，我们只用向量就够了。之后，他逐渐发展出了向量表示法。那么，我们是否也该放弃四元数呢？这其中有一段非常复杂的故事。这就是我在文章中讲述的故事。关于四元数和哈密尔顿的一些评论，请参阅我论文选集的第 23 页。）
 
-（《杨振宁文集》一书中的 “优雅的四元数”章节，我看到的版本是在第 35 页，这部分内容会在文末展出。）
+（《杨振宁文集》一书中的 “优雅的四元数”章节，我看到的版本是在第 35 页）
 
-In 1983, I published my selected papers. There is a comment about quaternion and Hamiltonian. I want to talk about this point. Number system in physics. The quantities that we talk about are expressed in terms of real numbers. But starting in 1926, up to 1926, only real numbers in physics. Some people might say in complex notation. But the usage of complex notation in alternating current theory is not fundamental. It's just for mathematical convenience.（1983年，我出版了我的论文选集。其中有一段关于四元数和哈密尔顿的评论。我想谈谈这一点。物理学中的数字系统。我们讨论的量都是用实数表示的。但自 1926 年起，直到 1926 年，物理学中只用实数。有人可能会说复数符号。但复数符号在交流电理论中的使用并不根本。只是为了数学上的方便。）
+In 1983, I published my selected papers. There is a comment about quaternion and Hamiltonian. I want to talk about this point. Number system in physics. The quantities that we talk about are expressed in terms of real numbers. But starting in 1926, up to 1926, only real numbers in physics. Some people might say in complex notation. But the usage of complex notation in alternating current theory is not fundamental. It's just for mathematical convenience.（1983年，我出版了我的论文选集。其中有一段关于四元数和哈密尔顿的评论。我想谈谈这一点，物理学中的数字系统。我们讨论的量都是用实数表示的。但自 1926 年起，直到 1926 年，物理学中只用实数。有人可能会说复数符号。但复数符号在交流电理论中的使用并不根本。只是为了数学上的方便。）
 
 #### 量子力学与复数
 
 In 1926, it became clear, when wave mechanics was developed, that in quantum mechanics, one has to use complex numbers. So in 1926, in Schrodinger, because of Schrodinger's work, it became clear that one has to use complex numbers. You can read my article about this story.（1926 年，随着波动力学的建立，人们清楚地认识到在量子力学中必须使用复数。因此，在 1926 年，由于薛定谔的研究成果，人们明确了必须使用复数这一事实。你可以阅读我关于这段历史的文章。）
 
-（《杨振宁文集》中的“负一的平方根、复相位与薛定谔”，第 636 页，这部分内容会在文末展出）
+（《杨振宁文集》中的“负一的平方根、复相位与薛定谔”，第 636 页）
 
 One of my articles was translated into Chinese. You can find it in Yang Zening's book. Look at this page 636. In that article, I described how Schrodinger discovered wave equations in 1926. How did he discover that one has to use complex numbers? Complex numbers in wave mechanics are intrinsic. They cannot be cancelled. They are different from complex numbers in alternating current theory. （我的一篇文章被翻译成了中文，你可以在杨振宁文集里找到它。看 636 页这一页。在那篇文章中，我描述了薛定谔在 1926 年是如何发现波动方程的。他是如何发现必须使用复数的？复数在波动力学中是固有的，无法消除。它们与交流电理论中的复数不同。）
 
@@ -63,18 +69,17 @@ A vector has three components. A, X, Y, Z, K. The three components of A are AX, 
 
 $$\vec{a} = a_x \hat{i} + a_y \hat{j} + a_z \hat{k} \quad\quad   \vec{a} \cdot \vec{b} = ab \cos \phi$$
 
-This is a scalar, a number. If these two numbers, A and B, have a dot product, and this vector is phi, then the definition of this product is AB cos phi. Am I wrong? Okay, thank you. If these two are in space, you have to create a plane for these two, and then phi is the vector between these two planes. Now I'm going to rewrite the formula. A to B is equal to A times the component of B along A. This is A, this is B. What is the component of B along A? If you make a vertical line from B, then this part is called the component of B along A. Then the length of this part is of course equal to B cos phi.(这是一个标量，一个数字。如果这两个数字 A 和 B 有一个点积，而这个角是 φ，那么这个积的定义就是 ABcosφ。如果这两个在空间中，你必须为它们创建一个平面，然后 φ 就是这两个平面之间的向量。现在我要重写这个公式。A 到 B 等于 A 乘以 B 沿 A 的分量。这是 A，这是 B。B 沿 A 的分量是什么？如果你从 B 画一条垂直线，那么这部分就叫做B 沿 A 的分量。那么这部分的长度当然等于 Bcosφ。)
+This is a scalar, a number. If these two numbers, A and B, have a dot product, and this vector is phi, then the definition of this product is AB cos phi. Am I wrong? Okay, thank you. If these two are in space, you have to create a plane for these two, and then phi is the vector between these two planes. Now I'm going to rewrite the formula. A to B is equal to A times the component of B along A. This is A, this is B. What is the component of B along A? If you make a vertical line from B, then this part is called the component of B along A. Then the length of this part is of course equal to B cos phi.(这是一个标量，结果是一个数字。如果这两个向量 A 和 B 之间有一个点积，它们之间的夹角角是 φ，那么这个积的定义就是 ABcosφ。如果这两个在空间中，你必须为它们创建一个平面，然后 φ 就是这两个平面之间的夹角。现在我要重写这个公式。A dot B 等于 A 乘以 B 沿 A 的分量。B 沿 A 的分量是什么？如果你从 B 画一条垂直线，那么这部分就叫做 B 沿 A 的分量。那么这部分的长度当然等于 Bcosφ。)
 
 ![[331.png|300]]
 $$\vec{a} \cdot \vec{b} = (a \cos \phi)(b) = (a)(b \cos \phi)$$
 
-So I have the formula just now. This is of course equal to B times the component of A along B. These three definitions are the same. With this, I have to prove a theorem called distributive law. Distributive law for dot product. This means that A dot B plus C is equal to A dot B plus A dot C. This requires a proof. But this proof is very simple.(所以我刚刚得到了这个公式。这当然等于B乘以A在B方向上的分量。这三个定义是相同的。有了这个，我需要证明一个定理，叫做分配律。点积的分配律。这意味着A点乘B加C等于A点乘B加上A点乘C。这需要一个证明。但这个证明非常简单。)
-
+So I have the formula just now. This is of course equal to B times the component of A along B. These three definitions are the same. With this, I have to prove a theorem called distributive law. Distributive law for dot product. This means that A dot B plus C is equal to A dot B plus A dot C. This requires a proof. But this proof is very simple.(所以我刚刚得到了这个公式。这当然等于 B乘以 A 在 B 方向上的分量。这三个定义是相同的。有了这个，我需要证明一个定理，叫做分配律。点积的分配律。这意味着 A点乘 B 加 C 等于 A 点乘 B 加上 A 点乘 C。这需要一个证明。但这个证明非常简单。)
 $$\text{向量点积满足分配率 }\quad \vec{a} \cdot (\vec{b}+\vec{c}) = \vec{a} \cdot \vec{b} + \vec{a} \cdot \vec{c}$$
 
 #### 向量点积分配率的证明
 
-Proof. A dot B cross C, B plus C, is equal to A times B plus C, component of B plus C along A. This is what I just said. But what is the component of B plus C along A? For example, this is A. This is B. This is C. Note that A and B must be on the same plane.(证明。点积 A 点 B 叉乘 C，B 加 C，等于 A 乘以 B 加 C，即 B 加 C 在 A 方向上的分量。这就是我刚才所说的。但 B 加 C 在 A 方向上的分量是什么呢？例如，这是 A。这是 B。这是 C。注意 A 和 B 必须在同一平面上。)
+Proof. A dot B plus C, is equal to A times B plus C, component of B plus C along A. This is what I just said. But what is the component of B plus C along A? For example, this is A. This is B. This is C. Note that A and B must be on the same plane.(证明。点积 A dot B 加 C，等于 A 乘以 B 加 C，即 B 加 C 在 A 方向上的分量。这就是我刚才所说的。但 B 加 C 在 A 方向上的分量是什么呢？例如，这是 A。这是 B。这是 C。注意 A 和 B 必须在同一平面上。)
 
 证明：$$\begin{align} 
 \vec{a} \cdot (\vec{b}+\vec{c}) &=a((\vec{b}+\vec{c}) \text{ 在 }\vec{a} \text{ 方向上的分量})  \\
@@ -122,7 +127,7 @@ $$\vec{b} \times \vec{a} = -(\vec{a} \times \vec{b})$$
 
 So that's not changed. But you have to take your right hand and go from B to A. So it goes inward. Therefore, it's equal to minus A cross B. Furthermore, A dot A cross B.(所以这一点没有改变。但你必须用右手从B移动到A，所以它是向内的。因此，它等于负A叉乘B。此外，A点A叉乘B。)
 
-What is this? Zero. Because A cross B is perpendicular to A. Therefore, the angle between them is 90 degrees. So by definition of dot product is zero. So this is equal to zero. Also is equal to. I also want to write down the following formula. A cross B, the length. This notation is not used in books.（这是什么？零。*因为 A叉乘 B 垂直于 A*。因此，它们之间的角度是90度。根据点积的定义，结果为零。所以这等于零。也等于。我还想写下以下公式。A叉乘B的长度。这个符号在书中没有使用。）
+What is this? Zero. Because A cross B is perpendicular to A. Therefore, the angle between them is 90 degrees. So by definition of dot product is zero. So this is equal to zero. Also is equal to. I also want to write down the following formula. A cross B, the length. This notation is not used in books.（这是什么？零。*因为 （A叉乘 B） 垂直于 A*。因此，它们之间的角度是90度。根据点积的定义，结果为零。所以这等于零。也等于。我还想写下以下公式。A叉乘B的长度。这个符号在书中没有使用。）
 
 $$\vec{a} \cdot (\vec{a} \times \vec{b})=\vec{b} \cdot (\vec{a} \times \vec{b}) = 0 \quad\quad |\vec{a} \times \vec{b}|=|\vec{a}||\vec{b}|\sin \phi=\text{平行四边形面积}$$
 
@@ -177,15 +182,15 @@ After you understand this picture carefully, you will understand what I am going
 
 Namely, A cross B is equal to AXI plus AYJ plus AZK cross BXI plus BYJ plus BZK. And that's equal to... Now using the distributive law, we have nine terms. But I cross I... What is I cross I? It's zero because sine phi is zero.（即，A 叉乘 B 等于 AXI 加 AYJ 加 AZK 叉乘 BXI 加 BYJ 加 BZK。这等于...现在利用分配律，我们有九项。但 I 叉乘 I...I 叉乘 I 是什么？由于 sinφ 为零，所以结果为零。）
 
+So all the I, I terms are... So there are only cross products which are not zero. Now I cross J. I'll write here. I cross J is equal to K. Obviously, I is the unit vector along X axis. J is the unit vector along Y axis. If you take the product, the lengths are both equal to one. The angle is 90 degrees. Sine phi is equal to one. So therefore, it becomes the unit vector along the Z axis. So I have this. And of course, cyclic permutation. J cross K is equal to I. K cross I is equal to J. Cyclic permutation. This is a common notation. CP means cyclic permutation. That means you write down this equation, and it's true also with the cyclic permutation. Cyclic permutation meaning J replacing I, K replacing J, I replacing K. In that order.(所以所有I、I项的叉积都是零。只有交叉乘积不为零。现在来看I叉乘J。我写在这里：*I叉乘J等于K*。显然，I是沿X轴的单位向量，J是沿Y轴的单位向量。当你计算叉积时，两者长度都为1，夹角为90度。正弦值为1，因此结果就是沿Z轴的单位向量。这样就得到了这个结果。当然还有循环置换：*J叉乘K等于I，K叉乘I等于J*。这是常见的表示法，CP代表循环置换。意思是写下这个等式后，通过循环置换也成立。循环置换指的是按顺序用J替换I、K替换J、I替换K。)
+
+Okay. So now it becomes obvious that J cross K will give me I. So therefore, I get A Y B Z minus A Z B Y times I plus A Z B I B X. No, A Z B X minus A X B Z times J plus A X B Y minus A Y B X times K. So the nine terms become six terms, and they are combined in this fashion, which is equal to a determinant. I have a tendency to underline I. Just forget about it. I don't need to underline. Right? (好的。那么现在很明显，J 叉乘 K 会得到 I。因此，我得到 (A_Y B_Z - A_Z B_Y) 乘以 I，加上 (A_Z B_X - A_X B_Z) 乘以 J，再加上 (A_X B_Y - A_Y B_X) 乘以 K。这样，九个项就变成了六个项，并且它们以这种方式组合，等于一个行列式。我有给 I 加下划线的习惯，别在意。我不需要强调，对吧？)
+
 $$\begin{align}
 \vec{a} \times \vec{b} &= (a_x \hat{i} + a_y \hat{j} + a_z \hat{k}) \times (b_x \hat{i} + b_y \hat{j} + b_z \hat{k})  \\
 &= (a_y b_z - b_y a_z) \hat{i} + (a_z b_x - b_z a_x) \hat{j} + (a_x b_y - b_x a_y) \hat{k} \\
 &= \begin{vmatrix} \hat{\imath} & \hat{\jmath} & \hat{k} \\ a_x & a_y & a_z \\ b_x & b_y & b_z \end{vmatrix}
 \end{align}$$
-
-So all the I, I terms are... So there are only cross products which are not zero. Now I cross J. I'll write here. I cross J is equal to K. Obviously, I is the unit vector along X axis. J is the unit vector along Y axis. If you take the product, the lengths are both equal to one. The angle is 90 degrees. Sine phi is equal to one. So therefore, it becomes the unit vector along the Z axis. So I have this. And of course, cyclic permutation. J cross K is equal to I. K cross I is equal to J. Cyclic permutation. This is a common notation. CP means cyclic permutation. That means you write down this equation, and it's true also with the cyclic permutation. Cyclic permutation meaning J replacing I, K replacing J, I replacing K. In that order.(所以所有I、I项的叉积都是零。只有交叉乘积不为零。现在来看I叉乘J。我写在这里：*I叉乘J等于K*。显然，I是沿X轴的单位向量，J是沿Y轴的单位向量。当你计算叉积时，两者长度都为1，夹角为90度。正弦值为1，因此结果就是沿Z轴的单位向量。这样就得到了这个结果。当然还有循环置换：*J叉乘K等于I，K叉乘I等于J*。这是常见的表示法，CP代表循环置换。意思是写下这个等式后，通过循环置换也成立。循环置换指的是按顺序用J替换I、K替换J、I替换K。)
-
-Okay. So now it becomes obvious that J cross K will give me I. So therefore, I get A Y B Z minus A Z B Y times I plus A Z B I B X. No, A Z B X minus A X B Z times J plus A X B Y minus A Y B X times K. So the nine terms become six terms, and they are combined in this fashion, which is equal to a determinant. I have a tendency to underline I. Just forget about it. I don't need to underline. Right? (好的。那么现在很明显，J 叉乘 K 会得到 I。因此，我得到 (A_Y B_Z - A_Z B_Y) 乘以 I，加上 (A_Z B_X - A_X B_Z) 乘以 J，再加上 (A_X B_Y - A_Y B_X) 乘以 K。这样，九个项就变成了六个项，并且它们以这种方式组合，等于一个行列式。我有给 I 加下划线的习惯，别在意。我不需要强调，对吧？)
 
 That determinant, if you expand it. By the way, if you do not remember or have never studied the determinants, go back and study it. It's extremely important. And you have to be very familiar with the determinant. Now according to the determinant, if you expand it according to the first row, because I times this two by two determinant, which is A Y B Z minus A Z B Y plus X like this.(那个行列式，如果你展开它。顺便说一句，如果你不记得或从未学过行列式，回去学习一下。这非常重要。你必须非常熟悉行列式。现在根据行列式，如果你按照第一行展开，因为I乘以这个二阶行列式，也就是AY BZ减去AZ BY，再加上X这样的项。)
 
@@ -193,14 +198,14 @@ So we have now proven this formula, which is very important. By the way, we had 
 
 Fundamental theorem is that it changes the sign of the determinant, etc. Take another one. What is A dot A cross B? If you do A dot A cross B, that means you remember A dot something. You take two vectors, you take the X component of this times the X component of this plus the Y component of this times the Y component of this. The component of this times the Z component of this. You add those three terms.(*基本定理在于它会改变行列式的符号等等*。再来看一个例子。A点乘A叉乘B等于什么？当你计算A点乘A叉乘B时，这意味着你需要记住A点乘某个向量。你需要取两个向量，将这个向量的X分量乘以另一个向量的X分量，加上这个向量的Y分量乘以另一个向量的Y分量，再加上这个向量的Z分量乘以另一个向量的Z分量。最后将这三个项相加。)
 
-So if you do it here, it is equivalent to replacing this I by, if I now wanted the A dot A cross B. All I have to do is replace I J K by A X A Y A Z. Then you get a determinant, which has two rows which are identical. Another theorem says if you have a determinant with two rows identical, it's equal to zero. So that's another proof of A dot A cross B equal to zero.(所以如果你在这里这样做，就相当于用A点A叉积B来替换这个I。我只需要把I J K换成A X A Y A Z。然后你会得到一个有两行相同的行列式。*另一个定理说，如果一个行列式有两行相同，那么它等于零。所以这是A点A叉积B等于零的另一个证明。*)
-
 $$
-a \cdot(\vec{a} \times \vec{b}) = \begin{vmatrix} a_x & a_y & a_z \\ a_x & a_y & a_z \\ b_x & b_y & b_z \end{vmatrix}=0$$
+\vec{a} \cdot(\vec{a} \times \vec{b}) = \begin{vmatrix} a_x & a_y & a_z \\ a_x & a_y & a_z \\ b_x & b_y & b_z \end{vmatrix}=0$$
+
+So if you do it here, it is equivalent to replacing this I by, if I now wanted the A dot A cross B. All I have to do is replace I J K by A X A Y A Z. Then you get a determinant, which has two rows which are identical. Another theorem says if you have a determinant with two rows identical, it's equal to zero. So that's another proof of A dot A cross B equal to zero.(所以如果你在这里这样做，就相当于用A点A叉积B来替换这个I。我只需要把I J K换成A X A Y A Z。然后你会得到一个有两行相同的行列式。*另一个定理说，如果一个行列式有两行相同，那么它等于零。所以这是A点A叉积B等于零的另一个证明。*)
 
 So is everything crystal clear? Am I going too fast or am I going too slow? OK, let's vote. Who wants to say I'm going too slow? Who wants to say I'm going too fast? Most people have no opinion. I think you are too shy. I assume that everybody has understood everything. If you have not completely understood it. OK. For those people who think that I'm going too fast. Which particular point you want me to explain again? No, no, no, no, no, no, no, no, no, no, no, no, no, no, no, no. You didn't understand anything, you ask now.(那么一切都清楚了吗？我讲得太快还是太慢？好，我们来投票。谁觉得我讲得太慢？谁觉得我讲得太快？大多数人都没有意见。我觉得你们太害羞了。我假设大家都已经理解了一切。如果你还没有完全理解。好吧。对于那些觉得我讲得太快的人。你们具体想让我再解释哪一点？不不不不不不不不不不不不不不不。你们什么都没听懂，现在才来问。)
 
-(学生提问)
+(学生提问，针对前文叉乘分配律证明图示的问题)
 
 Or you all understand? Yes? Let's see the last page of the paper. Last page. 上一张纸啊 哪个位置 我想请教一下就是 从这一步到这一步 这个时候证明是用这个图形来证明吗 是用刚刚这张纸上的那个 纸上的图来证明吗 对 对 是用这个来证明这一步过程吗 这个是通过显然的一种看法 是很显然的 
 
@@ -209,11 +214,73 @@ Or you all understand? Yes? Let's see the last page of the paper. Last page. 上
 
 #### 四元数话题（续）
 
-OK 假如大家没有问题 假如大家没有问题 我回到刚才讲这个 quaternions（四元数） 我想你们这里头 对于数学比较发生兴趣的人 会对这个 我底下要讲的 会觉得很有意思 因为这个 数目 是我刚才讲了 
+OK，假如大家没有问题，假如大家没有问题，我回到刚才讲这个 quaternions（四元数） 我想你们这里头对于数学比较发生兴趣的人，会对我底下要讲的，会觉得很有意思，因为这个 数目 是我刚才讲了 
 
 Starts from Actually one starts with integers Then Because one wants to divide So one gets into fractions But From fractions We got into irrational numbers Namely all real numbers Does everybody know When People began to realize That they are irrational numbers Does anybody know Whether they are more A rational number is a fraction A irrational number is a real number which cannot be written as a fraction This is not the correct definition But it's a definition that everybody would understand （从实际上讲，人们最初是从整数开始的。然后，因为需要除法运算，所以引入了分数。但从分数出发，我们又进入了无理数的领域，也就是所有的实数。有人知道吗？人们是什么时候开始意识到无理数的存在的？有没有人知道，无理数是否比有理数更多？有理数可以表示为分数，而无理数是不能表示为分数的实数。虽然这不是严格的定义，但却是大家都能理解的说法。）
 
 Does anybody know Are there more Real numbers Are there more rational numbers Or are there more irrational numbers Why How do you know That there are more irrational numbers This is a A question which was only resolved In the 19th century It follows A rule called The diagonal rule If you read some popular mathematics books It will explain to you Using the diagonal argument You can prove That there are many many more irrational numbers Than there are rational numbers And that line of mathematical development Became very very important And became That lead To the science of mathematical logic （有人知道实数更多吗，是有理数更多还是无理数更多，为什么？你怎么知道无理数更多？这是一个直到 19 世纪才解决的问题，它遵循一个叫做对角线法则的规则，如果你读一些通俗数学书籍它会用对角线论证向你解释，你可以证明无理数比有理数多得多，这条数学发展路线变得非常重要，并最终导致了数理逻辑这门科学的诞生）
+
+> [!NOTE]
+> 运用康托尔的“对角线方法”来论证无理数比有理数多。这个论证的核心思想是证明实数集是不可数的，而有理数集是可数的，从而夹在两者之间的无理数集必然是不可数的，且其基数（数量级）严格大于有理数集。整个论证分为三个关键步骤。
+> 
+> **第一步：** 证明有理数集 $\mathbb{Q}$ 是可数集
+> 
+> 有理数可以写成分数形式 $\frac{p}{q}$（其中 $p$ 是整数，$q$ 是正整数，且互质）。我们可以找到一个系统的方法将它们“排列”出来，从而与自然数建立一一对应关系。一个经典的方法是“对角线枚举法”：
+> 
+> 1.  将所有分数按分子和分母的绝对值之和进行分组：$|p| + |q| = 1, 2, 3, \dots$
+> 2.  在每一组内，按一定顺序（如分子从小到大）排列。
+> 3.  去掉重复的分数（如 $\frac{1}{2}$ 和 $\frac{2}{4}$ 只保留最简形式）。
+> 
+> 这样，所有有理数就被排成了一个长长的序列：$0, 1, -1, \frac{1}{2}, -\frac{1}{2}, 2, -2, \frac{1}{3}, -\frac{1}{3}, \frac{2}{3}, -\frac{2}{3}, 3, -3, \dots$
+> 
+> 既然我们可以把有理数一个一个地列出来，就意味着有理数可以和自然数建立一一对应关系。因此，有理数集是可数集。
+> 
+> **第二步：** 用康托尔对角线法证明实数集 $\mathbb{R}$ 是不可数集
+> 
+> 我们将焦点集中在 $(0, 1)$ 区间上的所有实数，这已经足够了。假设 $(0, 1)$ 区间上的实数是可数的，那么我们就可以把它们全部列出来：
+> $$
+> \begin{aligned}
+> r_1 &= 0.{\color{red}5} 1 0 3 2 9 \dots \\
+> r_2 &= 0.2 {\color{red}9} 7 1 4 5 \dots \\
+> r_3 &= 0.4 3 {\color{red}2} 8 1 6 \dots \\
+> r_4 &= 0.1 2 3 {\color{red}9} 2 7 \dots \\
+> r_5 &= 0.7 0 5 6 {\color{red}6} 1 \dots \\
+> r_6 &= 0.8 1 4 7 2 {\color{red}8} \dots \\
+> &\vdots
+> \end{aligned}$$
+> 
+> 现在，我们构造一个新的实数 $x$，它的构造规则如下：
+> *   $x$ 的小数点后第 $n$ 位数字，与 $r_n$ 的小数点后第 $n$ 位数字**不同**。
+> *   为了避免出现循环节 $9$ 带来的表示不唯一问题（如 $0.999\ldots = 1$），我们可以规定一个简单的规则：如果 $r_n$ 的第 $n$ 位是 $5$，则 $x$ 的第 $n$ 位取 $6$；否则，$x$ 的第 $n$ 位取 $5$。
+> 
+> 按照上图的例子，我们构造 $x$：
+> *   看 $r_1$ 的第 $1$ 位（红色 $5$），我们取 $6$。
+> *   看 $r_2$ 的第 $2$ 位（红色 $9$），不是 $5$，我们取 $5$。
+> *   看 $r_3$ 的第 $3$ 位（红色 $2$），不是 $5$，我们取 $5$。
+> *   看 $r_4$ 的第 $4$ 位（红色 $9$），不是 $5$，我们取 $5$。
+> *   看 $r_5$ 的第 $5$ 位（红色 $6$），不是 $5$，我们取 $5$。
+> *   看 $r_6$ 的第 $6$ 位（红色 $8$），不是 $5$，我们取 $5$。
+> *   $\dots$
+> 
+> 于是，我们得到 $x = 0.6\ 5\ 5\ 5\ 5\ 5\ \dots$。
+> 
+> 现在，这个 $x$ 具有一个关键性质：$x$ 不在我们之前列出的那个清单里。
+> *   $x$ 不等于 $r_1$，因为它们的第 $1$ 位数字不同。
+> *   $x$ 不等于 $r_2$，因为它们的第 $2$ 位数字不同。
+> *   $x$ 不等于 $r_3$，因为它们的第 $3$ 位数字不同。
+> *   $\dots$
+> *   一般地，$x$ 不等于任何一个 $r_n$，因为它们的第 $n$ 位数字不同。
+> 
+> 这就产生了矛盾！我们最初假设已经列出了 $(0, 1)$ 区间上的**所有**实数，但现在却构造出了一个不在列表中的实数 $x$。因此，我们的假设是错误的。$(0, 1)$ 区间上的实数不可能被一一列出，即实数是不可数的。
+> 
+> **第三步：** 得出最终结论
+> 
+> 现在，我们已知：
+> 1.  有理数集 $\mathbb{Q}$ 是可数的。
+> 2.  实数集 $\mathbb{R}$ 是不可数的。
+> 3.  实数集由有理数和无理数两部分构成：$\mathbb{R} = \mathbb{Q} \cup \mathbb{I}$。
+> 
+> 如果无理数集 $\mathbb{I}$ 也是可数的，那么两个可数集的并集（实数集）也应该是可数的。但我们已经证明实数集是不可数的，这就产生了矛盾。因此，唯一的可能是：无理数集 $\mathbb{I}$ 是不可数的。不仅如此，我们还可以得出更精确的结论：可数集相对于不可数集而言，其“大小”可以忽略不计。所以，在实数轴上，虽然有理数密密麻麻地分布着，但它们在数量上远远少于无理数。
 
 Mathematical logic Was one of the most important Subjects in mathematics Around the beginning of the 20th century And Hilbert Who was the greatest mathematician Perhaps with the Poincaré The two greatest mathematicians Around the year 1900 Devoted much of his effort To mathematical logic But does anybody know What happened to mathematical logic afterwards Hilbert's program Was proven To be impossible By a young PhD candidate Have you heard of this person's name? （数理逻辑是 20 世纪初数学中最重要的学科之一。而希尔伯特——他可能是与庞加莱并列的 1900 年前后最伟大的两位数学家——将大量精力投入到了数理逻辑研究中。但有人知道后来数理逻辑的发展如何吗？希尔伯特的纲领被一位年轻的博士生证明是不可能实现的。你听说过这个人的名字吗？）
 
@@ -242,6 +309,10 @@ A quaternion system deals with A plus B-I plus C-J plus D-K. It has three imagin
 But the question is how to divide. The theorem is this. The inverse of Q is the number which multiplied by Q, either in front or in the back, is equal to one. This is equal to... You see that this is very similar to complex numbers. With complex numbers, the inverse of a complex number is equal to the complex conjugate of that number divided by the absolute value squared of that number. This is just a generalization of that.(但问题在于如何划分。定理是这样的：Q 的逆元是一个数，无论在前或后乘以 Q，结果都等于 1。这相当于 $Q^{-1}Q=QQ^{-1}=1$……你看，这与复数非常相似。对于复数来说，一个复数的逆元等于该复数的共轭复数除以其绝对值的平方。这只不过是它的推广。)
 
 $$Q^{-1}=\frac{1}{a^2+b^2+c^2+d^2}a-bi-cj-dk$$
+
+复数的逆元：要找到 $z^{-1}$，使得 $z \cdot z^{-1} = 1$，可将分子和分母同时乘以共轭复数 $z^*=a-bi$：$$
+    z^{-1} = \frac{1}{z} = \frac{1}{z} \cdot \frac{z^*}{z^*} = \frac{z^*}{z \cdot z^*}$$而根据共轭复数的性质，我们知道 $z \cdot z^* = (a+bi)(a-bi) = a^2 + b^2 = |z|^2$。因此，自然就得到了：$$
+    z^{-1} = \frac{z^*}{|z|^2}$$这个推导过程清晰地展示了为什么共轭和模会出现在公式中 。
 
 So you might say that why did Hamilton choose only I-J-K? Why not just I-J? Why not I-J-K-L? These need proofs. It turns out, for example, if you cut off the... try to invent some rules for multiplication of I and J, you can prove that it would not work. It's only when you have three imaginary numbers satisfying this rule that this is a division algebra.(所以你可能会问，为什么哈密尔顿只选择了 $i,j,k$？为什么不只用 $i,j$？为什么不选 $i,j,k,l$？这些都需要证明。事实证明，举例来说，如果你截断……尝试为 $i$ 和 $j$ 的乘法发明一些规则，你可以证明这是行不通的。只有当你拥有三个满足这一规则的虚数时，才能构成一个可除代数。)
 
