--- a/基础物理/杨振宁/第十二讲.md
+++ b/基础物理/杨振宁/第十二讲.md
@@ -88,50 +88,72 @@ Anybody is unhappy? Okay, so I assume everybody is happy. But it's complicated t
 
 Now a real symmetrical matrix, any matrix, any three by three matrix, has three eigenvalues. We have already talked about the concept of eigenvalue.So if I take J minus lambda I, I is the unit matrix, and take the determinant and put it equal to zero, that gives you a cubic equation in lambda with real coefficients. So therefore it must have three roots. And each root is called an eigenvalue.So any three by three matrix has eigenvalues. But we now have a real symmetrical matrix. And I want first to prove that all three eigenvalues are real.Lemma. All three eigenvalues are real. Does anybody know how to prove this? （现在有一个实对称矩阵，任何矩阵，任何三乘三矩阵，都有三个特征值。我们已经讨论过特征值的概念。所以如果我取J减去λI，I是单位矩阵，然后取行列式并令其等于零，这将给出一个关于λ的实系数三次方程。因此它必须有三个根。每个根被称为一个特征值。所以任何三乘三矩阵都有特征值。但现在我们有一个实对称矩阵。我首先想证明所有三个特征值都是实数。*引理：所有三个特征值都是实数*。有人知道如何证明这一点吗？）
 
-令 $$|J- \lambda I| = 0$$
-
-(12.   39:46)
-
-
-
-
-
-
-
-
+令 $$|J- \lambda I| = 0$$有 $J \varphi- \lambda \varphi =0$，即 $J \varphi=\lambda \varphi$
 
 Okay.This is a fundamental theorem, and this is trivial. Because if there is a lambda which satisfies this determinant equal to zero, that means there exists, by linear algebra, there exists a psi such that J psi is equal to minus lambda psi. I times psi is psi is equal to zero.That is a fundamental theorem of linear algebra. If you have a determinant which is equal to zero, you can find a column which dotted into it gives zero. And that, of course, says J psi is equal to lambda psi.Now, we do not know whether lambda is real. In general, lambda should be complex. （好的。这是一个基本定理，而且非常显而易见。因为如果存在一个λ使得这个行列式等于零，根据线性代数，就意味着存在一个ψ使得Jψ等于负λψ。I乘以ψ就是ψ等于零。这是线性代数的基本定理。如果你有一个行列式等于零，你就可以找到一个列向量，点乘它得到零。这当然就意味着Jψ等于λψ。现在，我们不知道λ是否是实数。一般来说，λ应该是复数。）
 
-
 So we cannot assume lambda is real.Now, if lambda is not real, then psi is also not real. So we don't know whether lambda and psi are real or not. But I can take a psi dagger.I now introduce a concept of a dagger. A dagger, if I take a psi and dagger it, the definition is that you take the complex conjugate and the tilde. That means the psi, you first take the complex conjugate and turn it horizontal.So I now take psi tilde, psi dagger. Psi dagger is horizontal. Now, what is a psi dagger psi? （因此我们不能假设λ是实数。现在，如果λ不是实数，那么ψ也不是实数。所以我们不知道λ和ψ是否是实数。但是我可以取一个ψ的共轭转置。我现在引入一个转置的概念。转置，如果我取ψ并对其进行转置，定义就是取其复共轭并进行转置。这意味着ψ，你首先取其复共轭，然后将其水平翻转。所以我现在取ψ的转置，ψ的共轭转置。ψ的共轭转置是水平翻转的。那么，ψ的共轭转置乘以ψ是什么呢？）
 
+定义：$\varphi^{\dagger}=\tilde{\varphi^\star}$，所以有 $\varphi^{\dagger}J \varphi=\lambda \varphi^{\dagger}\varphi$
 
-Psi dagger psi is the sum of the absolute square of three numbers.If you have psi 1, psi 2, psi 3, psi dagger psi is equal to psi 1, absolute value squared, psi 2, absolute value squared, plus psi 3, absolute value squared. So this is real. And not equal to zero, because it's the sum of three absolute value squared.If it's equal to zero, all three must be equal to zero. We, of course, are talking about a psi which is not zero. So this is not equal to zero.Now let us look at this psi dagger J psi. Psi dagger J psi is a multiplication of a row and a matrix, three by three matrix and a column. （Psi dagger psi是三个数的绝对平方之和。如果你有psi 1、psi 2、psi 3，那么psi dagger psi就等于psi 1的绝对值平方加上psi 2的绝对值平方再加上psi 3的绝对值平方。因此这是一个实数，并且不等于零，因为它是三个绝对值平方的和。如果它等于零，那么这三个数都必须为零。当然，我们讨论的是一个非零的psi，所以这不等于零。现在让我们看看这个psi dagger J psi。Psi dagger J psi是一个行向量与一个3x3矩阵的乘积再乘以一个列向量。）
+Psi dagger psi is the sum of the absolute square of three numbers.If you have psi 1, psi 2, psi 3, psi dagger psi is equal to psi 1, absolute value squared, psi 2, absolute value squared, plus psi 3, absolute value squared. So this is real. And not equal to zero, because it's the sum of three absolute value squared.If it's equal to zero, all three must be equal to zero. We, of course, are talking about a psi which is not zero. So this is not equal to zero.Now let us look at this psi dagger J psi. Psi dagger J psi is a multiplication of a row and a matrix, three by three matrix and a column. （Psi dagger psi是三个数的绝对平方之和。如果你有psi 1、psi 2、psi 3，那么psi dagger psi就等于psi 1的绝对值平方加上psi 2的绝对值平方再加上psi 3的绝对值平方。因此这是一个实数，并且不等于零，因为它是三个绝对值平方的和。如果它等于零，那么这三个数都必须为零。当然，我们讨论的是一个非零的 psi，所以这不等于零。现在让我们看看这个psi dagger J psi。Psi dagger J psi是一个行向量与一个3x3矩阵的乘积再乘以一个列向量。）
 
+$\varphi^{\dagger}\varphi=|\varphi_{1}|^2+|\varphi_{2}|^2+|\varphi_{3}|^2 \neq 0$ 其结果是个实数，且不等于 0，$\varphi^{\dagger}J \varphi$ 从形状上看是 $(1,3) \times(3,3) \times (3,1)$。
 
-Now there are the matrices of the form x squared, xy, xz, etc., etc.Let's look at the diagonal ones. So you have the first element of the row times the first element of the column times x squared. That's, of course, real, because it's x squared times something absolute value squared.So that's real. For the off-diagonal elements, you have, because it's symmetrical, one is xy, the other is yx, and what is multiplied is a complex conjugate of each other added. So the symmetry of the matrix J dictates that this is also real.Is that obvious? （现在来看形如x²、xy、xz等的矩阵。我们先看对角线上的元素。行的第一个元素乘以列的第一个元素再乘以x²，这显然是实数，因为它是x²乘以某个模的平方。所以这是实数。对于非对角线元素，由于矩阵是对称的，一个是xy，另一个是yx，它们相乘的是彼此的复共轭相加。因此矩阵J的对称性决定了这也是实数。这很明显吗？）
+Now there are the matrices of the form x squared, xy, xz, etc., etc.Let's look at the diagonal ones. So you have the first element of the row times the first element of the column times x squared. That's, of course, real, because it's x squared times something absolute value squared.So that's real. For the off-diagonal elements, you have, because it's symmetrical, one is xy, the other is yx, and what is multiplied is a complex conjugate of each other added. So the symmetry of the matrix J dictates that this is also real.Is that obvious? （现在来看形如x²、xy、xz等的矩阵。我们先看对角线上的元素。行的第一个元素乘以列的第一个元素再乘以x²，这显然是实数，因为它是x²乘以某个模的平方。所以这是实数。对于非对角线元素，由于矩阵是对称的，一个是 xy，另一个是 yx，它们相乘的是彼此的复共轭相加。因此矩阵 J 的对称性决定了这（$\varphi^{\dagger}J \varphi$）也是实数。这很明显吗？）
 
+$$\varphi^{\dagger}J \varphi=\begin{bmatrix} \varphi_{1}^\star & \varphi_{2}^\star& \varphi_{3}^\star \end{bmatrix}\begin{bmatrix} x^2 &xy & xz\\ yx& y^2 &  yz\\ zx& zy& z^2 \end{bmatrix}\begin{bmatrix} \varphi_{1}\\ \varphi_{2}  \\ \varphi_{3}\end{bmatrix}$$
 
-Think about it for a few minutes. It becomes obvious. If it's still not obvious, I'll give you a formal proof.But the formal proof actually is also very simple, but it's better to understand it intuitively. Because psi dagger J psi, I'm now having a formal proof that this is real. This is a number.It's not a matrix. It's a one-by-one matrix, so it's a real number. So I can take its tilde.Now, a one-by-one matrix, if you take its complex conjugate and tilde, the tilde doesn't do anything because the one-by-one, of course, after you turn it, it's still the same thing. So this is merely the complex conjugate of that number. （思考几分钟，答案显而易见。如果还不明白，我会给出正式证明。但正式证明其实也很简单，不过最好能直观理解。因为ψ†Jψ，我现在正式证明这是实数。这是一个数，不是矩阵。它是一个1×1的矩阵，所以是实数。因此我可以取其共轭转置。对于1×1矩阵来说，取复共轭和转置时，转置操作不会改变任何东西——因为1×1矩阵转置后仍是它本身。所以这仅仅是该数的复共轭。）
+用最原始的方法展开，可得 $$\begin{align}
+&=(\varphi^\star_{1}x^2+\varphi^\star_{2}yx+\varphi^\star_{3}zx)\varphi_{1} + (\varphi^\star_{1}xy+\varphi^\star_{2}y^2+\varphi^\star_{3}zy)\varphi_{2}+(\varphi^\star_{1}xz+\varphi^\star_{2}yz+\varphi^\star_{3}z^2)\varphi_{3}
+\end{align}$$其中，带平方项的系数分别是 $\varphi^\star \varphi$ 是实数，其余的 $xy$ 和 $yx$ 等都是对称成对出现的。例如 $xy$ 的系数为 $\varphi_{1}^\star \varphi_{2}$，而 $yx$ 的系数为 $\varphi^\star_{2}\varphi_{1}$。
 
+例如，$\varphi_{1}=a+bj, \quad \varphi_{2}=c+dj$ ，则有 $\varphi_{1}^\star=a-bj, \quad \varphi_{2}^\star=c-dj$，则有：$$\begin{align}
+\varphi_{1}^\star \varphi_{2} & =ac+bd+adj-bcj \\
+\varphi^\star_{2}\varphi_{1} & = ac+bd -adj+bcj
+\end{align}$$因此 $\varphi_{1}^\star \varphi_{2}xy+\varphi^\star_{2}\varphi_{1}yx=(ac+bd)xy$ 是个实数。
 
-But by the rules of computation, first, this is equal to psi.I'm just copying down the definition. Now, J is real. Do you agree? Tilde is not changed.Psi star tilde star, I just get psi tilde. J is real, so it's still J. This psi becomes psi star. But if I do this, and the rules for the tilde is to tilde everyone and reverse the order, so I get psi.Now, J is symmetrical, so its tilde is equal to itself. And here I get psi tilde tilde, which is psi. So you see that this number is, after complex conjugation, tilde comes back to itself.（但根据计算规则，首先，这等于ψ。我只是在抄写定义。现在，J是实数。你同意吗？波浪号没有改变。ψ_波浪号_，我得到ψ波浪号。J是实数，所以它仍然是J。这个ψ变成ψ*。但如果我这样做，波浪号的规则是对每个人都加波浪号并颠倒顺序，所以我得到ψ。现在，J是对称的，所以它的波浪号等于它本身。在这里，我得到ψ波浪号波浪号，也就是ψ。所以你看，这个数在经过复共轭后，波浪号又回到了它本身。）
+Think about it for a few minutes. It becomes obvious. If it's still not obvious, I'll give you a formal proof.But the formal proof actually is also very simple, but it's better to understand it intuitively. Because psi dagger J psi, I'm now having a formal proof that this is real. This is a number.It's not a matrix. It's a one-by-one matrix, so it's a real number. So I can take its tilde.Now, a one-by-one matrix, if you take its complex conjugate and tilde, the tilde doesn't do anything because the one-by-one, of course, after you turn it, it's still the same thing. So this is merely the complex conjugate of that number. （思考几分钟，答案显而易见。如果还不明白，我会给出正式证明。但正式证明其实也很简单，不过最好能直观理解。因为ψ†Jψ，我现在正式证明这是实数。这是一个数，不是矩阵。它是一个1×1的矩阵，所以是个数。因此我可以取其共轭转置。对于1×1矩阵来说，取复共轭和转置时，转置操作不会改变任何东西——因为1×1矩阵转置后仍是它本身。所以这仅仅是该数的复共轭。）
 
+$$\widetilde{\varphi^{\dagger}J \varphi}^\star$$
+
+But by the rules of computation, first, this is equal to psi.I'm just copying down the definition. Now, J is real. Do you agree? Tilde is not changed.Psi star tilde star, I just get psi tilde. J is real, so it's still J. This psi becomes psi star. But if I do this, and the rules for the tilde is to tilde everyone and reverse the order, so I get psi.Now, J is symmetrical, so its tilde is equal to itself. And here I get psi tilde tilde, which is psi. So you see that this number is, after complex conjugation, tilde comes back to itself.（但根据计算规则，首先，这等于...我只是在抄写定义。现在，J是实数。你同意吗？波浪号没有改变。ψ_波浪号_，我得到ψ波浪号。J是实数，所以它仍然是J。这个ψ变成ψ*。但如果我这样做，波浪号的规则是对每个人都加波浪号并颠倒顺序，所以我得到ψ。现在，J是对称的，所以它的波浪号等于它本身。在这里，我得到ψ波浪号波浪号，也就是ψ。所以你看，这个数在经过复共轭后，波浪号又回到了它本身。）
+
+定义：$\varphi^{\dagger}=\tilde{\varphi^\star}$，所以有
+$$\widetilde{\varphi^{\dagger}J \varphi}^\star=\widetilde{(\tilde{\varphi}^\star J \varphi)^\star}=\widetilde{\tilde{\varphi} J \varphi^\star}=\tilde{\varphi^\star}J \varphi=\varphi^{\dagger}J\varphi$$
+又回到了原来的样子，所以可证明 $\varphi^{\dagger}J\varphi$ 是个实数。
 
 But it's a one-by-one matrix, so that means its complex conjugate itself, so therefore it's real. So this is a formal proof, but it's better what I explained earlier. You just write this out.If you write this expression out, you would easily see that the symmetry of J guarantees that it's real. Okay. Now, the left side is real.Psi dagger of psi is real, not zero, so I can divide, so that proves lambda is real. So let us have three eigenvalues. So I have J psi 1 is equal to lambda psi 1. J psi 2 is equal to lambda 2 psi 2. J psi 3 is equal to lambda 3 psi 3. Psi 1, psi 2, psi 3 are now real columns, and I can normalize them.（但这是一个1×1矩阵，因此它的复共轭就是其自身，所以它是实数。这虽然是一个形式化的证明，但不如我之前解释的直观。你只需展开这个表达式就能明显看出，J的对称性保证了其结果为实数。好的，现在左边是实数。Psi的伴随乘以psi是实数且非零，因此可以相除，这就证明了lambda是实数。现在我们假设有三个特征值。于是有J psi1 = λ1 psi1，J psi2 = λ2 psi2，J psi3 = λ3 psi3。Psi1、psi2、psi3现在是实数列向量，并且可以进行归一化处理。）
 
+对于公式：对于这个公式：$\varphi^{\dagger}J \varphi=\lambda \varphi^{\dagger}\varphi$，现在左侧这一项是实数，右侧 $\varphi^{\dagger}\varphi$ 也是实数，因此 $\lambda$ 也是实数。$$\begin{align}
+J \varphi_{1} = \lambda_{1}\varphi_{1} \\
+J \varphi_{2} = \lambda_{2}\varphi_{2} \\
+J \varphi_{3} = \lambda_{3}\varphi_{3}
+\end{align}$$
+注意这里的  $\varphi_{1},\varphi_{2},\varphi_{3}$ 是三个向量，而且是归一化后的单位向量，与上文分量中 $\varphi_{1},\varphi_{2},\varphi_{3}$ 区分开，不要混淆。
 
-Normalize them means I multiply the whole column by a number such that the absolute value squared of psi 1 is, psi 1 is a vector. I now multiply it by a number so that it becomes a unit length. So let psi 1, psi 2, psi 3 be normalized.Normalized means becomes unit vectors. So I now have three unit vectors, which are eigenvectors of J. Now I'm going to prove that they are forgivable to each other. The three eigenvectors can be chosen perpendicular to each other.Proof. （归一化意味着我将整列乘以一个数，使得ψ1的绝对值的平方（ψ1是一个向量）等于1。现在我将它乘以一个数，使其成为单位长度。因此，设ψ1、ψ2、ψ3为归一化后的向量。归一化意味着变成单位向量。所以现在我有三个单位向量，它们是J的特征向量。现在我将证明它们是相互正交的。这三个特征向量可以互相垂直。证明如下。）
+Normalize them means I multiply the whole column by a number such that the absolute value squared of psi 1 is, psi 1 is a vector. I now multiply it by a number so that it becomes a unit length. So let psi 1, psi 2, psi 3 be normalized.Normalized means becomes unit vectors. So I now have three unit vectors, which are eigenvectors of J. Now I'm going to prove that they are forgivable to each other. The three eigenvectors can be chosen perpendicular to each other.Proof. （归一化意味着我将整列乘以一个数，使得ψ1的绝对值的平方（ψ1是一个向量）等于1。现在我将它乘以一个数，使其成为单位长度。因此，设ψ1、ψ2、ψ3为归一化后的向量。归一化意味着变成单位向量。所以现在我有三个单位向量，它们是 J 的特征向量。现在我将证明它们是相互正交的。*这三个特征向量可以互相垂直*。证明如下。）
 
 First assume the three eigenvalues to be not equal. Assume lambda 1 not equal to lambda 2, not equal to lambda 3, not equal to lambda 1. In that case, let us take J psi 1 is equal to lambda psi 1, lambda 1 psi 1. I multiply it by psi 2 tilde.Then I take this equation, J psi 2 is equal to lambda 2 psi 2. What I'm going through is a trick which is repeatedly done, and this kind of trick is fundamental to quantum mechanics. （首先假设三个特征值互不相等。设λ₁≠λ₂，λ₂≠λ₃，且λ₃≠λ₁。在这种情况下，我们取Jψ₁=λ₁ψ₁（即λ₁作用于ψ₁）。我用ψ₂的共轭态与之相乘。接着取另一个方程Jψ₂=λ₂ψ₂。我正在演示的是一种量子力学中反复使用的核心技巧，这类技巧正是量子力学的基石所在。）
+
+假设：$\lambda_{1} \neq \lambda_{2} \neq \lambda_{3}$，取 $J \varphi_{1} = \lambda_{1}\varphi_{1}$，同乘 $\tilde{\varphi}_{2}$，即$$\tilde{\varphi}_{2}J \varphi_{1} = \tilde{\varphi}_{2}\lambda_{1}\varphi_{1}$$同样的操作可得：$$\tilde{\varphi}_{1}J \varphi_{2} = \tilde{\varphi}_{1}\lambda_{2}\varphi_{2}$$
+现在这两个公式，左侧是相等的。
 
 
 So you might as well learn it here. If I take this and multiply it with psi 1 tilde, I get these two equations.But I claim the left side are identical. Why? Because everything is real. We have already said that.If I take the tilde of this, I get this. But it's a number. It's a one by one matrix, so if you tilde it, it's the same thing as itself.So therefore, these two are the same. So we have proven lambda 1 psi 2 tilde lambda 2 is equal to lambda 2 psi 2 psi 1 tilde psi 2. But psi 2 tilde psi 1 is equal to psi 1 tilde psi 2, because they are tildes of each other.（所以你不如在这里学学。如果我拿这个和ψ1的共轭相乘，就得到这两个方程。但我断言左边是完全相同的。为什么？因为所有东西都是实数。我们之前已经说过了。如果我取这个的共轭，就得到这个。但它是个数字。是个1×1的矩阵，所以取共轭后等于它本身。因此，这两个是相同的。于是我们证明了λ1ψ2共轭λ2等于λ2ψ2ψ1共轭ψ2。但ψ2共轭ψ1等于ψ1共轭ψ2，因为它们互为共轭。）
 
-I get lambda 1 minus lambda 2 times psi 1, psi 2, tilde is equal to zero. We'll just assume that lambda 1 is not equal to lambda 2. So that means psi 1 and psi 2 are orthogonal, are perpendicular to each other. Similarly, so all three of them are perpendicular.So psi 1, psi 2, psi 3 form an orthonormal system. And I can certainly change the sign of psi 3. So if psi 1, psi 2, psi 3 form a left-handed system, I just change psi 3 into minus psi 3, then it becomes a right-handed system. （我得到λ1减去λ2乘以ψ1，ψ2，波浪线等于零。我们只需假设λ1不等于λ2。这意味着ψ1和ψ2是正交的，彼此垂直。同样地，所以三者都是互相垂直的。因此ψ1、ψ2、ψ3构成一个正交归一系统。我当然可以改变ψ3的符号。所以如果ψ1、ψ2、ψ3构成一个左手系，我只需将ψ3变为负ψ3，它就变成了右手系。）
+所以可以证明：$$\lambda_{1}\tilde{\varphi_{2}}\varphi_{1}=\lambda_{2}\tilde{{\varphi_{1}}}\varphi_{2}$$
+而 $\tilde{\varphi_{2}}\varphi_{1}$ 和 $\tilde{{\varphi_{1}}}\varphi_{2}$ 互为 tilde，都是一个数，所以彼此相等，因此有：$$(\lambda_{1}-\lambda_{2})\tilde{{\varphi_{1}}}\varphi_{2}=0$$
+而这里的 $\lambda_{1} \neq \lambda_{2}$，所以有 $\tilde{{\varphi_{1}}}\varphi_{2}=0$，即 $\varphi_{1} \perp \varphi_{2}$。
+
+I get lambda 1 minus lambda 2 times psi 1, psi 2, tilde is equal to zero. We'll just assume that lambda 1 is not equal to lambda 2. So that means psi 1 and psi 2 are orthogonal, are perpendicular to each other. Similarly, so all three of them are perpendicular.So psi 1, psi 2, psi 3 form an orthonormal system. And I can certainly change the sign of psi 3. So if psi 1, psi 2, psi 3 form a left-handed system, I just change psi 3 into minus psi 3, then it becomes a right-handed system. （我得到λ1减去λ2乘以ψ1，ψ2，波浪线等于零。我们只需假设λ1不等于λ2。这意味着ψ1和ψ2是正交的，彼此垂直。同样地，所以三者都是互相垂直的。因此ψ1、ψ2、ψ3构成一个正交归一系统。我当然可以改变ψ3的符号。所以如果 ψ1、ψ2、ψ3 构成一个左手系，我只需将ψ3变为负ψ3，它就变成了右手系。）
+
+（53.29）
 
 
-So form an orthonormal system, and I can add right-handed.But we have made the assumption that lambda 1 and lambda 2 and lambda 3 are not identical. You can ask what happens if two of them or all three of them are identical. Then you require more considerations.But it's obvious that it must be true, because if you slightly change the j, if to start with two of them are identical, the third one is not identical, then I slightly change the original j, the three of them would not become identical. And then you have a system. Then you go to the limit that the two of them become identical, and still you have this orthonormal system.（因此形成一个标准正交系，我还可以加上右手系。但我们假设了λ₁、λ₂和λ₃互不相等。你可能会问，如果其中两个或全部三个都相等会发生什么。这就需要更多的考量。但显然结论依然成立，因为如果你稍微改变j——假设最初有两个相等而第三个不等，当我微调原始j时，这三个特征值并不会同时变得相等。这样你就能建立一个坐标系。然后让其中两个特征值趋近于相等时，这个标准正交系依然成立。）
+
+
+So form an orthonormal system, and I can add right-handed.But we have made the assumption that lambda 1 and lambda 2 and lambda 3 are not identical. You can ask what happens if two of them or all three of them are identical. Then you require more considerations.But it's obvious that it must be true, because if you slightly change the j, if to start with two of them are identical, the third one is not identical, then I slightly change the original j, the three of them would not become identical. And then you have a system. Then you go to the limit that the two of them become identical, and still you have this orthonormal system.（因此形成一个标准正交系，我还可以加上右手系。但我们假设了λ₁、λ₂和λ₃互不相等。你可能会问，如果其中两个或全部三个都相等会发生什么。这就需要更多的考量。但显然结论依然成立，因为如果你稍微改变 j——假设最初有两个相等而第三个不等，当我微调原始 j 时，这三个特征值并不会同时变得相等。这样你就能建立一个坐标系。然后让其中两个特征值趋近于相等时，这个标准正交系依然成立。）
 
 
 This kind of a situation occurs repeatedly. The existence of the orthonormal right-handed system is a general property. And the case of degenerate eigenvalues, if two eigenvalues are equal, it's called degenerate.The case of degenerate eigenvalues is a very special case. And in general, if you can prove it for the general case, then it works also for the limiting case of degeneracy. But we can even understand what we just said a little bit better.If all three eigenvalues are not the same, then psi 1, psi 2, psi 3 are uniquely defined by what we said. If psi 1 is equal to psi 2, but not equal to psi 3, then you have one psi 3 and one psi 2, but these psi 1 and psi 2 are equal. （这种情况会反复出现。正交右手坐标系的存在是一个普遍性质。而当特征值出现退化时（即两个特征值相等的情况），就称为退化特征值。退化特征值的情况属于非常特殊的案例。一般来说，如果你能证明普遍情况成立，那么该结论在退化的极限情况下也同样适用。不过我们可以更深入地理解刚才的论述：如果三个特征值不完全相同，那么ψ1、ψ2、ψ3就能根据前述条件被唯一确定；如果ψ1等于ψ2但不等于ψ3，那么你会得到一个ψ3和一个ψ2（此时ψ1和ψ2是相等的）。）
