--- a/基础物理/杨振宁/第四讲.md
+++ b/基础物理/杨振宁/第四讲.md
@@ -1,74 +1,88 @@
 
+#### 书籍推荐
+
+总的原则是看一些比较现实的，已经被论证出来的东西，年轻学者，不要被一些空洞的东西所吸引，从一开始就走上一些缥缈的路线。后续在第五讲中还提到了霍金的《时间简史》一类的书籍，相信很多人都看过或听过，这实际上是不被推荐的。
+
 I hope you have no difficulties with your exercises. I distributed a new syllabus. I want to remind you of two things. First, it says material not covered by the book will not be included in the midterm nor in the final. In this way, you can feel more comfortable. Also, at the bottom of this page, I wrote something about some books that I would recommend.（希望你在做练习时没有遇到困难。我分发了一份新的教学大纲。我想提醒你两件事。首先，大纲中提到书本未涵盖的内容不会出现在期中或期末考试中。这样你可以更放心。另外，在这页底部，我推荐了一些书籍的相关信息。）
 
-I recommend a book by James Jeans called The Mysterious Universe. I think it's translated in Chinese. The reason I'm telling you this is because last week, a student came to me and said that he read a book that he didn't understand. The book he showed me was called Green. It's a relatively new book. I told him not to read this kind of book. Because if you ask me, I think this kind of book is inhumane. Because what it talks about is Green. Green is a professor at Columbia University.（我推荐一本詹姆斯·金斯写的书，叫《神秘的宇宙》。我想它应该有中文译本。我之所以告诉你这个，是因为上周有个学生来找我，说他读了一本看不懂的书。他给我看的书名叫《格林》。这是一本比较新的书。我告诉他不要读这种书。因为在我看来，我觉得这种书是不人道的。因为它讲的是格林。格林是哥伦比亚大学的一位教授。）
+I recommend a book by James Jeans called The Mysterious Universe. I think it's translated in Chinese. The reason I'm telling you this is because last week, a student came to me and said that he read a book that he didn't understand. The book he showed me was called Green. It's a relatively new book. I told him not to read this kind of book. Because if you ask me, I think this kind of book is inhumane. Because what it talks about is Green. Green is a professor at Columbia University.（我推荐一本詹姆斯·金斯写的书，叫《神秘的宇宙》。我想它应该有中文译本。我之所以告诉你这个，是因为上周有个学生来找我，说他读了一本看不懂的书。他给我看的书名叫 Green。这是一本比较新的书。我告诉他不要读这种书。因为在我看来，我觉得这种书是不好的。因为它讲的是 Green。Green 是哥伦比亚大学的一位教授。）
+
+《神秘的宇宙》这本书，年代比较久远，我找过中文版本的，是繁体中文的，说实话读起来无论是繁体字本身上的阅读体验还是内容话术表达上，总觉得怪怪的，读不通顺，阅读体验不佳，也可能是我自己的问题。如果有需要的话可留言，后面会分享出来。
 
 I think he is in his forties or fifties. The direction he is going is what many young people are doing now. But this direction is now a hollow. It hasn't been implemented, and it's unlikely to be implemented in the future. But if a young person doesn't know this, I think the most likely phenomenon is that he is attracted to an unstable direction. This is very bad.（我认为他四五十岁。他走的方向是现在很多年轻人正在做的。但这个方向现在是个空洞。它还没有被落实，未来也不太可能被落实。但如果一个年轻人不知道这一点，我认为最可能出现的现象是他被一个不稳定的方向所吸引。这非常糟糕。）
 
-James Jeans is a great astrophysicist in the early 20th century. What is described in this book concerns the great revolutions of the beginning of the 20th century, namely special relativity, general relativity, and quantum mechanics. At the time that Jeans wrote the book, these were already revolutions which have materialized. They have materialized. These were revolutions that affected the history of mankind. This is completely different from the hollow.（詹姆斯·金斯是20世纪初一位伟大的天体物理学家。这本书所描述的，正是20世纪初那几场伟大的革命——狭义相对论、广义相对论和量子力学。当金斯撰写这本书时，这些革命已经成为现实。它们已经实现了。这些是影响了人类历史的革命。这与空洞的东西完全不同。）
+James Jeans is a great astrophysicist in the early 20th century. What is described in this book concerns the great revolutions of the beginning of the 20th century, namely special relativity, general relativity, and quantum mechanics. At the time that Jeans wrote the book, these were already revolutions which have materialized. They have materialized. These were revolutions that affected the history of mankind. This is completely different from the hollow.（詹姆斯·金斯是 20 世纪初一位伟大的天体物理学家。这本书所描述的，正是 20 世纪初那几场伟大的革命——狭义相对论、广义相对论和量子力学。当金斯撰写这本书时，这些革命已经成为现实。它们已经实现了。这些是影响了人类历史的革命。这与空洞的东西完全不同。）
 
 So when you read these books, you should have a choice. The other journal that I recommend is the Scientific American. The Scientific American is now translated into Chinese. You could read either the Chinese version or the English version. The Scientific American would have articles about the kind of thing that Mr. Green writes about. But most of it concerns more realistic research.（所以当你阅读这些书籍时，你应该有所选择。我推荐的另一本期刊是《科学美国人》。《科学美国人》现在已经有中文译本了。你可以阅读中文版或英文版。《科学美国人》会刊登格林先生所写的那类文章。但其中大部分内容涉及更现实的研究。）
 
 Much of it concerns biology, for example. I highly recommend this to you for the following reason. The educational system in China tends to make students concentrated and just go into one direction. The educational system, especially in America, is the opposite. It has a tendency to want students to learn a lot of things. Both of them have advantages and disadvantages.（例如，其中很多内容与生物学有关。我强烈推荐你阅读这本书，原因如下：中国的教育体系往往让学生专注于单一方向，而美国的教育体系则恰恰相反，倾向于让学生广泛涉猎各种知识。两者各有利弊。）
 
-But because you have been educated under the Chinese educational system, so you should perhaps absorb some of the advantages of the other system. So if you broaden your horizons, it's good. If you start to read Scientific American, you will find that many of the articles you have difficulty understanding.（但由于你是在中国教育体系下接受教育的，所以也许你应该吸收其他体系的一些优点。因此，开阔视野对你有好处。如果你开始阅读《科学美国人》，你会发现很多文章难以理解。）
+But because you have been educated under the Chinese educational system, so you should perhaps absorb some of the advantages of the other system. So if you broaden your horizons, it's good. If you start to read Scientific American, you will find that many of the articles you have difficulty understanding.Don't worry about that. Just keep on reading it. And after you have read it for half a year, you would realize that many of the things that you at first did not understand, you now understand much better. And this is a way to learn. （但由于你是在中国教育体系下接受教育的，所以也许你应该吸收其他体系的一些优点。因此，开阔视野对你有好处。如果你开始阅读《科学美国人》，你会发现很多文章难以理解。别担心。继续读下去就好。等你读了半年之后，你就会发现很多一开始不理解的东西，现在理解得更好了。这就是学习的方法。）
 
-Don't worry about that. Just keep on reading it. And after you have read it for half a year, you would realize that many of the things that you at first did not understand, you now understand much better. And this is a way to learn. Okay. Because I have some appointment this afternoon, so this afternoon's consultation period from 4 to 5 is canceled.（别担心那个。继续读下去就好。等你读了半年之后，你就会发现很多一开始不理解的东西，现在理解得更好了。这就是学习的方法。好的。因为我今天下午有个约会，所以下午4点到5点的咨询时间取消了。）
+Okay. Because I have some appointment this afternoon, so this afternoon's consultation period from 4 to 5 is canceled. But I shall schedule it for tomorrow. But just for this week. This week will be changed to Tuesday. （好的。因为我今天下午有个会，所以下午 4 点到 5 点的咨询时间取消了。但我明天会安排。但这周仅此一次。这周将改到周二。）
 
-But I shall schedule it for tomorrow. But just for this week. This week will be changed to Tuesday. Okay. Let's talk about the fourth chapter. The fourth chapter is we discuss motions in two dimensions or three dimensions. It's actually very similar to the problems of motion in one dimension. First, if you have a body which is moving in two dimensions like this, from this point to this point, there's a displacement. So there's a displacement which is a vector.（但我明天会安排。但这周仅此一次。这周将改到周二。好的。我们来讨论第四章。第四章讲的是二维或三维空间中的运动。实际上，这与一维运动的问题非常相似。首先，如果一个物体像这样在二维空间中移动，从这个点到那个点，就会有一个位移。所以位移是一个矢量。）
+## 第四章：二维或三维空间的运动
 
-The coordinate of a particle would be designated by R. It's a vector. And three dimensions is a three dimensional vector starting from some origin. So from this point to this point of the average velocity, average velocity is equal to the displacement divided by a student. The displacement is a three dimensional vector. So this velocity is also a three dimensional effect. We can express R like this.（粒子的坐标用 $\vec{r}$ 表示。它是一个矢量。在三维空间中，这是一个从某个原点出发的三维矢量。因此，从这一点到平均速度这一点，平均速度等于位移除以时间。位移是一个三维矢量。所以这个速度也是一个三维矢量。我们可以这样表示R。）
+#### 位移、（平均/瞬时）速度、（平均/瞬时）加速度
+
+Okay. Let's talk about the fourth chapter. The fourth chapter is we discuss motions in two dimensions or three dimensions. It's actually very similar to the problems of motion in one dimension. First, if you have a body which is moving in two dimensions like this, from this point to this point, there's a displacement. So there's a displacement which is a vector.（好的。我们来讨论第四章。第四章讲的是二维或三维空间中的运动。实际上，这与一维运动的问题非常相似。首先，如果一个物体像这样在二维空间中移动，从这个点到那个点，就会有一个位移。所以位移是一个矢量。）
+
+> [!warning]
+> 我们的原则还是：
+> 
+> 1. 基本不修复转录中的英文错误，主要是本人还不具备这种能力
+> 2. 中文仅选择性修复明显错误，如果一段内容乱七八糟，可忽略，直接看下文公式即可
+> 3. 但是涉及到数学符号较多且文稿描述不清时，后面会补充出 LaTeX 编辑的清晰表达式
+> 4. 简单示意图不展示，一方面原图不清晰，其次我懒得画，如需请对照视频观看
+> 5. 主打一个，主要的核心内容力求准确无误，简单内容请自行纠错或脑补
+
+The coordinate of a particle would be designated by R. It's a vector. And three dimensions is a three dimensional vector starting from some origin. So from this point to this point of the average velocity, average velocity is equal to the displacement divided by a student. The displacement is a three dimensional vector. So this velocity is also a three dimensional effect. We can express R like this.（粒子的坐标用 $\vec{r}$ 表示。它是一个矢量。在三维空间中，这是一个从某个原点出发的三维矢量。因此，从这一点到这一点，平均速度等于位移除以时间。位移是一个三维矢量。所以这个速度也是一个三维矢量。我们可以这样表示R。）
 
 $$\text{平均速度}=\frac{\Delta \vec{r}}{\Delta t}$$
 
-Oh, you can write it as X, I plus Y, J plus Z, K. Well, IJK are the three unit vectors along the X axis, Y axis and Z axis. A right handed system. After we have the definition of the average velocity, we can have an instantaneous velocity. Namely, we make this delta t smaller and smaller. Now, I am going to draw a larger diagram. If delta t is this, the displacement is in this direction, so the average velocity is also in this direction.(哦，你可以写成X乘以I，加上Y乘以J，再加上Z乘以K。这里的IJK就是沿着X轴、Y轴和Z轴的三个单位向量，构成一个右手坐标系。定义好平均速度后，我们就能得到瞬时速度。也就是说，我们让这个Δt越来越小。现在，我要画一个更大的示意图。如果Δt是这个，位移就在这个方向上，那么平均速度也是这个方向。 )
+Oh, you can write it as X, I plus Y, J plus Z, K. Well, IJK are the three unit vectors along the X axis, Y axis and Z axis. A right handed system. After we have the definition of the average velocity, we can have an instantaneous velocity. Namely, we make this delta t smaller and smaller. Now, I am going to draw a larger diagram. If delta t is this, the displacement is in this direction, so the average velocity is also in this direction.(哦，你可以写成X乘以I，加上Y乘以J，再加上Z乘以K。这里的 IJK 就是沿着 X 轴、Y 轴和 Z 轴的三个单位向量，构成一个右手坐标系。定义好平均速度后，我们就能得到瞬时速度。也就是说，我们让这个 Δt 越来越小。现在，我要画一个更大的示意图。如果 Δt 是这个，位移就在这个方向上，那么平均速度也是这个方向。 )
 
 $$\vec{r}=(x,y,z)= x \hat{i} + y \hat{j} + z \hat{k}$$
 
-It's equal to this vector divided by delta t. Now, if I take a smaller delta t, I may be going this way. So this divided by the smaller delta t is the average velocity during this shorter period. If I now shrink delta t to zero, which direction would be the average velocity? Obviously, it would become along the tangent direction.(它等于这个向量除以Δt。现在，如果我取一个更小的Δt，我可能会朝这个方向移动。因此，这个除以更小的Δt就是在更短时间内的平均速度。如果我现在将Δt缩小到零，平均速度会朝哪个方向？显然，它会沿着切线方向。)
+It's equal to this vector divided by delta t. Now, if I take a smaller delta t, I may be going this way. So this divided by the smaller delta t is the average velocity during this shorter period. If I now shrink delta t to zero, which direction would be the average velocity? Obviously, it would become along the tangent direction.(它等于这个向量除以 Δt。现在，如果我取一个更小的 Δt，我可能会朝这个方向移动。因此，这个除以更小的 Δt 就是在更短时间内的平均速度。如果我现在将 Δt 缩小到零，平均速度会朝哪个方向？显然，它会沿着切线方向。)
 
-So we have the idea of instantaneous velocity. And that's equal to the limit of delta r over delta t as delta t goes to zero. That's the definition of the instantaneous velocity. Usually that's just called velocity. Delta r, as delta t goes to zero, delta r becomes smaller and smaller. But delta t also becomes smaller and smaller.(于是我们有了瞬时速度的概念。它等于当Δt趋近于零时Δr与Δt比值的极限。这就是瞬时速度的定义。通常简称为速度。当Δt趋近于零时，Δr会变得越来越小，但Δt也同样会变得越来越小。)
+So we have the idea of instantaneous velocity. And that's equal to the limit of delta r over delta t as delta t goes to zero. That's the definition of the instantaneous velocity. Usually that's just called velocity. Delta r, as delta t goes to zero, delta r becomes smaller and smaller. But delta t also becomes smaller and smaller.(于是我们有了瞬时速度的概念。它等于当 Δt 趋近于零时 Δr 与 Δt 比值的极限。这就是瞬时速度的定义。通常简称为速度。当 Δt 趋近于零时，Δr 会变得越来越小，但 Δt 也同样会变得越来越小。)
 
 $$\text{瞬时速度 } \vec{v}=\lim_{ \Delta t \to 0 } \frac{\Delta \vec{r}}{\Delta t}=\frac{\mathrm{d}\vec{r}}{\mathrm{d}t}$$
 
-So the ratio delta r over delta t approaches a finite number. And that's what the—so this is the velocity. This is exactly similar to what we have discussed last time about motion in one dimension. There is very little difference. It's just that we write it as a three-dimensional vector. Of course, with this, we now have also the concept of average acceleration.(因此，比率Δr/Δt趋近于一个有限数。这就是——所以这就是速度。这与我们上次讨论的一维运动非常相似。几乎没有区别。只是我们把它写成了一个三维矢量。当然，有了这个，我们现在也有了平均加速度的概念。)
+So the ratio delta r over delta t approaches a finite number. And that's what the—so this is the velocity. This is exactly similar to what we have discussed last time about motion in one dimension. There is very little difference. It's just that we write it as a three-dimensional vector. Of course, with this, we now have also the concept of average acceleration.(因此，比率 Δr/Δt 趋近于一个有限数。这就是——所以这就是速度。这与我们上次讨论的一维运动非常相似。几乎没有区别。只是我们把它写成了一个三维矢量。当然，有了这个，我们现在也有了平均加速度的概念。)
 
-Just a second. This, by definition, is equal to the derivative of r with respect to t. Such a limit is a derivative. The instantaneous acceleration is equal to the next derivative. We shall have an explicit example of what this acceleration is. Next, we talk about projectile motion. Projectile.(稍等。根据定义，这等于r对t的导数。这个极限就是一个导数。瞬时加速度等于下一个导数。我们将有一个明确的例子来说明这个加速度是什么。接下来，我们讨论抛体运动。抛体。)
+Just a second. This, by definition, is equal to the derivative of r with respect to t. Such a limit is a derivative. The instantaneous acceleration is equal to the next derivative. We shall have an explicit example of what this acceleration is. (稍等。根据定义，这等于r对t的导数。这个极限就是一个导数。瞬时加速度等于下一个导数。我们将有一个明确的例子来说明这个加速度是什么。)
 
 $$\text{瞬时加速度 } \vec{a} = \lim_{ \Delta t \to 0 } \frac{\Delta \vec{v}}{\Delta t}=\frac{\mathrm{d}^2 \vec{r}}{\mathrm{d}t^2}$$
 
-By definition, the acceleration, instantaneous acceleration is equal to d squared r dt squared. So I take this r and take the derivative. So I get d squared x dt squared i plus d squared y dt squared j plus d squared z dt squared k. In other words, the three components of the acceleration are separately calculated.(根据定义，加速度，即瞬时加速度等于d²r/dt²。因此，我取这个r并求导。于是得到d²x/dt² i + d²y/dt² j + d²z/dt² k。换句话说，加速度的三个分量是分别计算的。)
+#### 抛体运动
 
-$$\text{抛体运动：}\vec{a}=\frac{\mathrm{d}^2 \vec{r}}{\mathrm{d}t^2} = \frac{\mathrm{d}^2 \vec{x}}{\mathrm{d}t^2}i + \frac{\mathrm{d}^2 \vec{y}}{\mathrm{d}t^2}j+\frac{\mathrm{d}^2 \vec{z}}{\mathrm{d}t^2}k=-gk$$
+Next, we talk about projectile motion. Projectile. By definition, the acceleration, instantaneous acceleration is equal to d squared r dt squared. So I take this r and take the derivative. So I get d squared x dt squared i plus d squared y dt squared j plus d squared z dt squared k. In other words, the three components of the acceleration are separately calculated.(接下来，我们讨论抛体运动。抛体。根据定义，加速度，即瞬时加速度等于d²r/dt²。因此，我取这个r并求导。于是得到d²x/dt² i + d²y/dt² j + d²z/dt² k。换句话说，加速度的三个分量是分别计算的。)
 
-The x component of the acceleration only relates to x as a function of t. x is a function of t. So a projectile comes out. Suppose this is x-axis, this is z-axis, this is x-axis, this is y-axis. The x-axis motion, x as a function of t, has nothing to do with y as a function of t or z as a function of t. So what is the characteristic of a projectile motion? The three components of the acceleration, only z-axis has acceleration.(加速度的x分量仅与x作为t的函数相关。x是t的函数。于是抛体运动就出现了。假设这是x轴，这是z轴，这是x轴，这是y轴。x轴方向的运动，即x作为t的函数，与y作为t的函数或z作为t的函数无关。那么抛体运动的特点是什么？加速度的三个分量中，只有z轴方向存在加速度。)
+$$\text{抛体运动：}\vec{a}=\frac{\mathrm{d}^2 \vec{r}}{\mathrm{d}t^2} = \frac{\mathrm{d}^2 \vec{x}}{\mathrm{d}t^2}\hat{i} + \frac{\mathrm{d}^2 \vec{y}}{\mathrm{d}t^2} \hat{j}+\frac{\mathrm{d}^2 \vec{z}}{\mathrm{d}t^2} \hat{k}=-g \hat{k}$$
+
+The x component of the acceleration only relates to x as a function of t. x is a function of t. So a projectile comes out. Suppose this is x-axis, this is z-axis, this is x-axis, this is y-axis. The x-axis motion, x as a function of t, has nothing to do with y as a function of t or z as a function of t. So what is the characteristic of a projectile motion? The three components of the acceleration, only z-axis has acceleration.(加速度的x分量仅与x作为t的函数相关。x是t的函数。于是抛体运动就出现了。假设这是x轴，这是z轴，这是x轴，这是y轴。x轴方向的运动，即x作为t的函数，与y作为t的函数或z作为t的函数无关。那么抛体运动的特点是什么？*加速度的三个分量中，只有 z 轴方向存在加速度。*)
 
 The x-axis and y-axis have no acceleration. Only the z-axis has acceleration. So the definition of projectile motion can be said that this quantity is equal to negative g. It is equal to a negative g multiplied by a unit vector in the z-direction.(x 轴和 y 轴没有加速度。只有 z 轴有加速度。因此，抛体运动的定义可以说这个量等于 $-g$。它等于 $-g$ 乘以 z 方向的单位向量。)
 
-Multiplied by a negative g. The reason for the negative g is that we always take z-axis to go upwards. So what does this represent? This represents d squared x dt is equal to zero. d squared y dt, d squared z. In other words, the x-axis is a motion without acceleration.(乘以 $-g$ 的原因是我们总是将 z 轴朝上。那么这代表什么呢？这表示 d²x/dt² 等于零。d²y/dt²，d²z/dt²。换句话说，x 轴上的运动没有加速度。)
+Multiplied by a negative g. The reason for the negative g is that we always take z-axis to go upwards. So what does this represent? This represents d squared x dt is equal to zero. d squared y dt, d squared z. In other words, the x-axis is a motion without acceleration.The y-axis is the same. The z-axis is a motion with uniform acceleration. d squared x dt squared represents that the x-axis motion has no acceleration.It represents dx dt. (乘以 $-g$ 的原因是我们总是将 z 轴朝上。那么这代表什么呢？这表示 d²x/dt² 等于零。d²y/dt²，d²z/dt²。换句话说，x 轴上的运动没有加速度。y 轴也没有加速度。z 轴是匀加速运动。d²x/dt²表示x轴运动没有加速度。它代表dx/dt。）
 
-The y-axis is the same. The z-axis is a motion with uniform acceleration. d squared x dt squared represents that the x-axis motion has no acceleration.It represents dx dt. The acceleration in the x-direction is zero. It means that there is no acceleration. No acceleration means that it is a uniform velocity. So dx dt is equal to a constant. Constant means that it is a constant.（y轴相同。z轴是匀加速运动。d²x/dt²表示x轴运动没有加速度。它代表dx/dt。x方向的加速度为零。这意味着没有加速度。没有加速度意味着它是匀速运动。因此 dx/dt 等于一个常数。常数意味着它是一个恒量。）
-
-At this time, we can write it as x vx zero. It means that the velocity in the x-axis is zero. The velocity when t is equal to zero. Similarly, dy dt is equal to vy zero. The acceleration of the z-axis is negative g. It means that every unit of time increases the velocity of the z-axis by negative g. So dz dt is equal to negative g times t plus vz. With this formula, you see that the z-axis z-axis velocity increases by minus g every unit of t. So the first line gives you the acceleration.（此时，我们可以将其写作 $(v_x)_{0}$。即 t 等于零时的速度。同理，dy/dt等于 $(v_{y})_{0}$。z 轴的加速度为 $-g$，表示每单位时间 z 轴速度增加 -g。因此，dz/dt 等于 -gt。通过这个公式可以看出，z轴速度每单位时间t增加负g。所以第一行给出的是加速度。）
+The acceleration in the x-direction is zero. It means that there is no acceleration. No acceleration means that it is a uniform velocity. So dx dt is equal to a constant. Constant means that it is a constant. At this time, we can write it as x vx zero. It means that the velocity in the x-axis is zero. The velocity when t is equal to zero. Similarly, dy dt is equal to vy zero. The acceleration of the z-axis is negative g. It means that every unit of time increases the velocity of the z-axis by negative g. So dz dt is equal to negative g times t plus vz. With this formula, you see that the z-axis z-axis velocity increases by minus g every unit of t. So the first line gives you the acceleration.（x方向的加速度为零。这意味着没有加速度。没有加速度意味着它是匀速运动。因此 dx/dt 等于一个常数。常数意味着它是一个恒量。此时，我们可以将其写作 $(v_x)_{0}$。即 t 等于零时的速度。同理，dy/dt等于 $(v_{y})_{0}$。z 轴的加速度为 $-g$，表示每单位时间 z 轴速度增加 -g。因此，dz/dt 等于 -gt。通过这个公式可以看出，z轴速度每单位时间t增加负g。所以第一行给出的是加速度。）
 
 $$\text{分量加速度：}\frac{\mathrm{d}^2 x}{\mathrm{d}t^2}=0；\frac{\mathrm{d}^2 y}{\mathrm{d}t^2}=0；\frac{\mathrm{d}^2 z}{\mathrm{d}t^2}=-g$$
 $$分量速度：\frac{\mathrm{d}x}{\mathrm{d}t}=(v_{x})_{0};\quad \frac{\mathrm{d}y}{\mathrm{d}t}=(v_{y})_{0};\quad \frac{\mathrm{d}z}{\mathrm{d}t}=(v_{z})_{0}-gt$$
-
 $$\text{分量位移：}x=(v_{x})_{0}t+x_{0};\quad y=(v_{y})_{0}t+y_{0}; \quad z=(v_{z})_{0}t-\frac{1}{2}gt^2+z_{0}$$
 
 It's zero zero minus g. The second line gives you the these three lines gives you the velocity. If the velocity is this. So we now know what is x. Similarly, you get v x zero t plus x zero y is equal to v y zero t plus y zero z. Now, the emotion is a uniform acceleration.(这是零减g。第二行给出了这三行给出了速度。如果速度是这个。那么我们现在知道x是什么了。同样地，你得到vx零t加x零y等于vy零t加y零z。现在，运动是一个匀加速运动。)
 
-Uniform acceleration. We had the formula before. So this is equal to v z zero t minus one half g t squared plus zero. We have this formula for uniform motion. For example, if we start from this point, if the particle has a v x zero v z zero. So suppose there is no motion in the y axis. So it's a planar motion. You can communicate the motion. Then it's obvious that it will go.(匀加速运动。我们之前已经推导过这个公式。因此这个表达式等于vz0t减去1/2gt²再加上零。我们得到了这个匀加速运动公式。举例来说，如果我们从这个点出发，假设粒子具有初速度vx0和vz0。同时假设y轴方向没有运动，那么这就是一个平面运动。你可以这样描述这个运动轨迹。显然粒子将会沿着这样的路径运动。)
+Uniform acceleration. We had the formula before. So this is equal to v z zero t minus one half g t squared plus zero. We have this formula for uniform motion. For example, if we start from this point, if the particle has a v x zero v z zero. So suppose there is no motion in the y axis. So it's a planar motion. You can communicate the motion. Then it's obvious that it will go.(匀加速运动。我们之前已经推导过这个公式。因此这个表达式等于vz0t减去1/2gt²再加上z0。我们得到了这个匀加速运动公式。举例来说，如果我们从这个点出发，假设粒子具有初速度vx0和vz0。同时假设y轴方向没有运动，那么这就是一个平面运动。你可以这样描述这个运动轨迹。显然粒子将会沿着这样的路径运动。)
 
-This gives you a parametric representation. You know, time for the representation. I'm sure in high school you have learned this. And you get time for with the t. This is linear. This is quadratic. So this curve is a quadratic curve. It's a parabola. You're going to show the parabola. You win the parabola. The name parabola, ellipse, and hyperbola. This and this and don't share. You're going home.(这给出了一个参数表示。你知道的，是时候展示这个表示了。我相信你在高中就学过这个。然后你用t来表示时间。这是线性的。这是二次的。所以这条曲线是二次曲线。这是一条抛物线。你将展示这条抛物线。抛物线的名称，椭圆，还有双曲线。都是圆锥曲线)
+This gives you a parametric representation. You know, time for the representation. I'm sure in high school you have learned this. And you get time for with the t. This is linear. This is quadratic. So this curve is a quadratic curve. It's a parabola. You're going to show the parabola. You win the parabola. The name parabola, ellipse, and hyperbola. This and this and don't share. You're going home.(这给出了一个参数表示。你知道的，是时候展示这个表示了。我相信你在高中就学过这个。然后你用 t 来表示时间。这是线性的。这是二次的。所以这条曲线是二次曲线。这是一条抛物线。抛物线、椭圆、双曲线，这些都是圆锥曲线)
 
------ 30 分钟分割线（休息时间）-----------
+In great detail by the Greeks. And so Greek geometry was one of the great achievements. And one of the reasons that the modern science did not originate in China.One of, there are many reasons, but one of the most important reason was that in ancient China, people only studied algebra essentially, never developed geometry. If you read the Greek ancient works on geometry, you must admire how much detail, how much time they had spent on geometry, and how much they have understood the conic sections. （希腊人对此进行了极其详尽的阐述。因此，希腊几何学是伟大的成就之一。这也是现代科学未起源于中国的原因之一。原因有很多，但最重要的原因之一是，在古代中国，人们主要研究代数，从未发展几何学。如果你读过古希腊关于几何学的著作，你一定会惊叹于他们对几何学投入了多少细节和时间，以及他们对圆锥曲线的理解有多深。）
 
-In great detail by the Greeks. And so Greek geometry was one of the great achievements. And one of the reasons that the modern science did not originate in China.（希腊人对此进行了极其详尽的阐述。因此，希腊几何学是伟大的成就之一。这也是现代科学未起源于中国的原因之一。）
-
-One of, there are many reasons, but one of the most important reason was that in ancient China, people only studied algebra essentially, never developed geometry. If you read the Greek ancient works on geometry, you must admire how much detail, how much time they had spent on geometry, and how much they have understood the conic sections. We had in the last page the following formula.（原因有很多，但最重要的原因之一是，在古代中国，人们主要研究代数，从未发展几何学。如果你读过古希腊关于几何学的著作，你一定会惊叹于他们对几何学投入了多少细节和时间，以及他们对圆锥曲线的理解有多深。我们在上一页中有以下公式。）
-
-d square z, dz dt is equal to v. The way we obtained this formula. We start from this and obtain this formula. Remember how we did that the last time. We said that if there is a velocity which is equal to this, and it's a uniform acceleration, then we first calculate an average velocity for an interval. We take the velocity at the beginning and the velocity at the end and took the arithmetic mean, and then multiply the arithmetic mean by the time interval. We got this formula.（d平方z除以dt等于v。我们是这样推导出这个公式的：从这个式子出发，最终得到这个公式。还记得上次我们是怎么做的吗？我们假设存在一个等于该值的速度，且为匀加速运动时，首先计算时间间隔内的平均速度——取初速度和末速度的算术平均值，再乘以时间间隔，就得到了这个公式。）
+We had in the last page the following formula. d square z, dz dt is equal to v. The way we obtained this formula. We start from this and obtain this formula. Remember how we did that the last time. We said that if there is a velocity which is equal to this, and it's a uniform acceleration, then we first calculate an average velocity for an interval. We take the velocity at the beginning and the velocity at the end and took the arithmetic mean, and then multiply the arithmetic mean by the time interval. We got this formula.（我们在上一页中有以下公式。 d平方z除以dt等于v。我们是这样推导出这个公式的：从这个式子出发，最终得到这个公式。还记得上次我们是怎么做的吗？我们假设存在一个等于该值的速度，且为匀加速运动时，首先计算时间间隔内的平均速度——取初速度和末速度的算术平均值，再乘以时间间隔，就得到了这个公式。）
 
 It's a correct argument. But in mathematics, that procedure becomes regularized by calculus. Namely, from this you can integrate. The integration gives you dz dt is equal to the integral d square z dt squared dt. And that is equal to the integral of v zero z minus minus gt dt. This is a linear expression.（这是一个正确的论点。但在数学中，这个过程通过微积分变得规范化。也就是说，由此你可以进行积分。积分得到dz dt等于d平方z dt平方dt的积分。这等于v零z减去负gt dt的积分。这是一个线性表达式。）
 
@@ -79,15 +93,15 @@ $$z = \int \frac{\mathrm{d}z}{\mathrm{d}t}\mathrm{d}t=\int(\left(v_{z})_{0}-gt \
 
 -----------------
 
-And the linear expression, you can look up the formula and you get the result. This depends on a formula which is a tn dt is equal to a plus constant. This is in appendix E. What I'm telling you is the following.（线性表达式，你可以查阅公式并得到结果。这取决于一个公式，即tn dt等于a加上常数。这在附录E中。我要告诉你的是以下内容。）
+And the linear expression, you can look up the formula and you get the result. This depends on a formula which is a tn dt is equal to a plus constant. This is in appendix E. What I'm telling you is the following.Starting from the velocity, which is linear in t, we argue that, starting from the d square z dt squared, which is a constant, z is equal to, I wrote this wrong, z is equal to the integral dz dt dt. So it's equal to this. This is the result. （线性表达式，你可以查阅公式并得到结果。这取决于一个公式，即tn dt等于a加上常数。这在附录E中。我要告诉你的是以下内容。从速度开始，它是t的线性函数，我们论证，从d平方z dt平方开始，它是一个常数，z等于，我写错了，z等于dz dt dt的积分。所以它等于这个。这就是结果。)
 
-Starting from the velocity, which is linear in t, we argue that, starting from the d square z dt squared, which is a constant, z is equal to, I wrote this wrong, z is equal to the integral dz dt dt. So it's equal to this. This is the result. (从速度开始，它是t的线性函数，我们论证，从d平方z dt平方开始，它是一个常数，z等于，我写错了，z等于dz dt dt的积分。所以它等于这个。这就是结果。)
+We argue that by saying that we took the average velocity, which is the arithmetic mean of the beginning velocity and the final velocity. But in calculus, it becomes a rule. It becomes you don't have to think. You use a formula like this. This formula is very important. And that formula you can find in appendix E in the book. So gradually, as time goes on, we are going to switch to using more calculus. I just talked about projectile motion. Do you have any questions? It's very simple. (我们认为，通过取平均速度（即初速度和末速度的算术平均值）可以解释这一点。但在微积分中，这变成了一条规则。你不需要思考，直接套用这样的公式即可。这个公式非常重要。你可以在本书的附录E中找到该公式。*随着时间的推移，我们将逐渐转向更多地使用微积分*。我刚才讲了抛体运动。你们有什么问题吗？这很简单。)
 
-We argue that by saying that we took the average velocity, which is the arithmetic mean of the beginning velocity and the final velocity. But in calculus, it becomes a rule. It becomes you don't have to think. You use a formula like this. This formula is very important. And that formula you can find in appendix E in the book.(我们认为，通过取平均速度（即初速度和末速度的算术平均值）可以解释这一点。但在微积分中，这变成了一条规则。你不需要思考，直接套用这样的公式即可。这个公式非常重要。你可以在本书的附录E中找到该公式。)
+#### 例题
 
-So gradually, as time goes on, we are going to switch to using more calculus. I just talked about projectile motion. Do you have any questions? It's very simple. OK. Now let's do a sample problem in the book. The sample problem says there is an airplane, which is flying at a height of 500 meters.(随着时间的推移，我们将逐渐转向更多地使用微积分。我刚才讲了抛体运动。你们有什么问题吗？这很简单。好的。现在我们来做一个书上的例题。例题说有一架飞机，飞行高度为500米。)
+（这个示例对应的是教材 12th 示例问题 4.4.2）
 
-It has a velocity, which is a uniform velocity, which is 55.0 meters per second. It releases a bomb. When the bomb is released, at the time that it's released, it goes with the airplane, so it has the same velocity at that time.(它以匀速运动，速度为每秒55.0米。当炸弹被释放时，在释放的那一刻，它会跟随飞机一起运动，因此此时炸弹具有与飞机相同的速度。)
+OK. Now let's do a sample problem in the book. The sample problem says there is an airplane, which is flying at a height of 500 meters. It has a velocity, which is a uniform velocity, which is 55.0 meters per second. It releases a bomb. When the bomb is released, at the time that it's released, it goes with the airplane, so it has the same velocity at that time.(好的。现在我们来做一个书上的例题。例题说有一架飞机，飞行高度为500米。它以匀速运动，速度为每秒55.0米。当炸弹被释放时，在释放的那一刻，它会跟随飞机一起运动，因此此时炸弹具有与飞机相同的速度。)
 
 But then it begins to fall. The vx of the bomb has the same initial value as the velocity of the plane. And from what we have learned, it will remain that. Therefore, the plane and the bomb, at each moment, would be on the same vertical line. In other words, at every moment, the pilot of the plane can see the bomb directly under him. So at the time that the bomb hits the ground, it's like this.(但随后它开始下落。炸弹的水平速度与飞机的初始速度相同。根据我们所学的知识，这一速度将保持不变。因此，飞机和炸弹在每一刻都处于同一条垂直线上。换句话说，飞行员随时都能看到炸弹正下方。所以当炸弹撞击地面时，情况是这样的。)
 
